commit bilingual contents

--- a/docs/docs-ref-autogen/excel_1_8/excel/excel.conditionalcolorscalecriteria.yml
+++ b/docs/docs-ref-autogen/excel_1_8/excel/excel.conditionalcolorscalecriteria.yml
@@ -1,25 +1,25 @@
 ### YamlMime:UniversalReference
 items:
-  - uid: excel.Excel.ConditionalColorScaleCriteria
+  - uid: 'excel!Excel.ConditionalColorScaleCriteria:interface'
     summary: |-
-      <span data-ttu-id="daa3a-101">表示色阶的条件。</span><span class="sxs-lookup"><span data-stu-id="daa3a-101">Represents the criteria of the color scale.</span></span>
+      <span data-ttu-id="ca5df-101">表示色阶的条件。</span><span class="sxs-lookup"><span data-stu-id="ca5df-101">Represents the criteria of the color scale.</span></span>
 
-      <span data-ttu-id="daa3a-102">\[[API 集: ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="daa3a-102">\[ [API set: ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="ca5df-102">\[[API 集： ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="ca5df-102">\[ [API set: ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: Excel.ConditionalColorScaleCriteria
     fullName: Excel.ConditionalColorScaleCriteria
     langs:
       - typeScript
     type: interface
-    package: excel
+    package: excel!
     children:
-      - excel.Excel.ConditionalColorScaleCriteria.maximum
-      - excel.Excel.ConditionalColorScaleCriteria.midpoint
-      - excel.Excel.ConditionalColorScaleCriteria.minimum
-  - uid: excel.Excel.ConditionalColorScaleCriteria.maximum
+      - 'excel!Excel.ConditionalColorScaleCriteria#maximum:member'
+      - 'excel!Excel.ConditionalColorScaleCriteria#midpoint:member'
+      - 'excel!Excel.ConditionalColorScaleCriteria#minimum:member'
+  - uid: 'excel!Excel.ConditionalColorScaleCriteria#maximum:member'
     summary: |-
-      <span data-ttu-id="daa3a-103">最大点色阶条件。</span><span class="sxs-lookup"><span data-stu-id="daa3a-103">The maximum point Color Scale Criterion.</span></span>
+      <span data-ttu-id="ca5df-103">最大点色阶条件。</span><span class="sxs-lookup"><span data-stu-id="ca5df-103">The maximum point Color Scale Criterion.</span></span>
 
-      <span data-ttu-id="daa3a-104">\[[API 集: ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="daa3a-104">\[ [API set: ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="ca5df-104">\[[API 集： ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="ca5df-104">\[ [API set: ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: maximum
     fullName: maximum
     langs:
@@ -29,12 +29,12 @@ items:
       content: 'maximum: Excel.ConditionalColorScaleCriterion;'
       return:
         type:
-          - excel.Excel.ConditionalColorScaleCriterion
-  - uid: excel.Excel.ConditionalColorScaleCriteria.midpoint
+          - 'excel!Excel.ConditionalColorScaleCriterion:interface'
+  - uid: 'excel!Excel.ConditionalColorScaleCriteria#midpoint:member'
     summary: |-
-      <span data-ttu-id="daa3a-105">色阶为 3 色阶时的中点色阶条件。</span><span class="sxs-lookup"><span data-stu-id="daa3a-105">The midpoint Color Scale Criterion if the color scale is a 3-color scale.</span></span>
+      <span data-ttu-id="ca5df-105">色阶为 3 色阶时的中点色阶条件。</span><span class="sxs-lookup"><span data-stu-id="ca5df-105">The midpoint Color Scale Criterion if the color scale is a 3-color scale.</span></span>
 
-      <span data-ttu-id="daa3a-106">\[[API 集: ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="daa3a-106">\[ [API set: ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="ca5df-106">\[[API 集： ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="ca5df-106">\[ [API set: ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: midpoint
     fullName: midpoint
     langs:
@@ -44,12 +44,12 @@ items:
       content: 'midpoint?: Excel.ConditionalColorScaleCriterion;'
       return:
         type:
-          - excel.Excel.ConditionalColorScaleCriterion
-  - uid: excel.Excel.ConditionalColorScaleCriteria.minimum
+          - 'excel!Excel.ConditionalColorScaleCriterion:interface'
+  - uid: 'excel!Excel.ConditionalColorScaleCriteria#minimum:member'
     summary: |-
-      <span data-ttu-id="daa3a-107">最小点色阶条件。</span><span class="sxs-lookup"><span data-stu-id="daa3a-107">The minimum point Color Scale Criterion.</span></span>
+      <span data-ttu-id="ca5df-107">最小点色阶条件。</span><span class="sxs-lookup"><span data-stu-id="ca5df-107">The minimum point Color Scale Criterion.</span></span>
 
-      <span data-ttu-id="daa3a-108">\[[API 集: ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="daa3a-108">\[ [API set: ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="ca5df-108">\[[API 集： ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="ca5df-108">\[ [API set: ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: minimum
     fullName: minimum
     langs:
@@ -59,4 +59,7 @@ items:
       content: 'minimum: Excel.ConditionalColorScaleCriterion;'
       return:
         type:
-          - excel.Excel.ConditionalColorScaleCriterion
+          - 'excel!Excel.ConditionalColorScaleCriterion:interface'
+references:
+  - uid: 'excel!Excel.ConditionalColorScaleCriterion:interface'
+    name: Excel.ConditionalColorScaleCriterion
