--- a/docs/docs-ref-autogen/excel_1_9/excel/excel.chartaddedeventargs.yml
+++ b/docs/docs-ref-autogen/excel_1_9/excel/excel.chartaddedeventargs.yml
@@ -1,26 +1,26 @@
 ### YamlMime:UniversalReference
 items:
-  - uid: excel.Excel.ChartAddedEventArgs
+  - uid: 'excel!Excel.ChartAddedEventArgs:interface'
     summary: |-
-      <span data-ttu-id="79843-101">提供有关引发添加的事件的图表的信息。</span><span class="sxs-lookup"><span data-stu-id="79843-101">Provides information about the chart that raised the Added event.</span></span>
+      <span data-ttu-id="956e9-101">提供有关引发添加的事件的图表的信息。</span><span class="sxs-lookup"><span data-stu-id="956e9-101">Provides information about the chart that raised the Added event.</span></span>
 
-      <span data-ttu-id="79843-102">\[[API 集: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="79843-102">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="956e9-102">\[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="956e9-102">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: Excel.ChartAddedEventArgs
     fullName: Excel.ChartAddedEventArgs
     langs:
       - typeScript
     type: interface
-    package: excel
+    package: excel!
     children:
-      - excel.Excel.ChartAddedEventArgs.chartId
-      - excel.Excel.ChartAddedEventArgs.source
-      - excel.Excel.ChartAddedEventArgs.type
-      - excel.Excel.ChartAddedEventArgs.worksheetId
-  - uid: excel.Excel.ChartAddedEventArgs.chartId
+      - 'excel!Excel.ChartAddedEventArgs#chartId:member'
+      - 'excel!Excel.ChartAddedEventArgs#source:member'
+      - 'excel!Excel.ChartAddedEventArgs#type:member'
+      - 'excel!Excel.ChartAddedEventArgs#worksheetId:member'
+  - uid: 'excel!Excel.ChartAddedEventArgs#chartId:member'
     summary: |-
-      <span data-ttu-id="79843-103">获取已添加至工作表的图表的 ID。</span><span class="sxs-lookup"><span data-stu-id="79843-103">Gets the id of the chart that is added to the worksheet.</span></span>
+      <span data-ttu-id="956e9-103">获取已添加至工作表的图表的 ID。</span><span class="sxs-lookup"><span data-stu-id="956e9-103">Gets the id of the chart that is added to the worksheet.</span></span>
 
-      <span data-ttu-id="79843-104">\[[API 集: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="79843-104">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="956e9-104">\[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="956e9-104">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: chartId
     fullName: chartId
     langs:
@@ -31,11 +31,11 @@ items:
       return:
         type:
           - string
-  - uid: excel.Excel.ChartAddedEventArgs.source
+  - uid: 'excel!Excel.ChartAddedEventArgs#source:member'
     summary: |-
-      <span data-ttu-id="79843-105">获取事件源。</span><span class="sxs-lookup"><span data-stu-id="79843-105">Gets the source of the event.</span></span> <span data-ttu-id="79843-106">有关详细信息，请参阅 Excel.EventSource。</span><span class="sxs-lookup"><span data-stu-id="79843-106">See Excel.EventSource for details.</span></span>
+      <span data-ttu-id="956e9-105">获取事件源。</span><span class="sxs-lookup"><span data-stu-id="956e9-105">Gets the source of the event.</span></span> <span data-ttu-id="956e9-106">有关详细信息，请参阅 Excel.EventSource。</span><span class="sxs-lookup"><span data-stu-id="956e9-106">See Excel.EventSource for details.</span></span>
 
-      <span data-ttu-id="79843-107">\[[API 集: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="79843-107">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="956e9-107">\[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="956e9-107">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: source
     fullName: source
     langs:
@@ -45,12 +45,12 @@ items:
       content: 'source: Excel.EventSource | "Local" | "Remote";'
       return:
         type:
-          - Excel.EventSource | "Local" | "Remote"
-  - uid: excel.Excel.ChartAddedEventArgs.type
+          - 'excel!Excel.ChartAddedEventArgs#source~0:complex'
+  - uid: 'excel!Excel.ChartAddedEventArgs#type:member'
     summary: |-
-      <span data-ttu-id="79843-108">获取事件的类型。</span><span class="sxs-lookup"><span data-stu-id="79843-108">Gets the type of the event.</span></span> <span data-ttu-id="79843-109">有关详细信息，请参阅 Excel.EventType。</span><span class="sxs-lookup"><span data-stu-id="79843-109">See Excel.EventType for details.</span></span>
+      <span data-ttu-id="956e9-108">获取事件的类型。</span><span class="sxs-lookup"><span data-stu-id="956e9-108">Gets the type of the event.</span></span> <span data-ttu-id="956e9-109">有关详细信息，请参阅 Excel.EventType。</span><span class="sxs-lookup"><span data-stu-id="956e9-109">See Excel.EventType for details.</span></span>
 
-      <span data-ttu-id="79843-110">\[[API 集: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="79843-110">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="956e9-110">\[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="956e9-110">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: type
     fullName: type
     langs:
@@ -61,11 +61,11 @@ items:
       return:
         type:
           - '"ChartAdded"'
-  - uid: excel.Excel.ChartAddedEventArgs.worksheetId
+  - uid: 'excel!Excel.ChartAddedEventArgs#worksheetId:member'
     summary: |-
-      <span data-ttu-id="79843-111">获取已在其中添加图表的工作表的 ID。</span><span class="sxs-lookup"><span data-stu-id="79843-111">Gets the id of the worksheet in which the chart is added.</span></span>
+      <span data-ttu-id="956e9-111">获取已在其中添加图表的工作表的 ID。</span><span class="sxs-lookup"><span data-stu-id="956e9-111">Gets the id of the worksheet in which the chart is added.</span></span>
 
-      <span data-ttu-id="79843-112">\[[API 集: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="79843-112">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="956e9-112">\[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="956e9-112">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: worksheetId
     fullName: worksheetId
     langs:
@@ -76,3 +76,13 @@ items:
       return:
         type:
           - string
+references:
+  - uid: 'excel!Excel.ChartAddedEventArgs#source~0:complex'
+    name: Excel.EventSource | "Local" | "Remote"
+    fullName: Excel.EventSource | "Local" | "Remote"
+    spec.typeScript:
+      - uid: 'excel!Excel.EventSource:enum'
+        name: Excel.EventSource
+        fullName: Excel.EventSource
+      - name: ' | "Local" | "Remote"'
+        fullName: ' | "Local" | "Remote"'
