--- a/docs/docs-ref-autogen/excel_1_9/excel/excel.interfaces.chartpivotoptionsloadoptions.yml
+++ b/docs/docs-ref-autogen/excel_1_9/excel/excel.interfaces.chartpivotoptionsloadoptions.yml
@@ -1,23 +1,23 @@
 ### YamlMime:UniversalReference
 items:
-  - uid: excel.Excel.Interfaces.ChartPivotOptionsLoadOptions
+  - uid: 'excel!Excel.Interfaces.ChartPivotOptionsLoadOptions:interface'
     summary: |-
-      <span data-ttu-id="1a568-101">封装数据透视图的选项。</span><span class="sxs-lookup"><span data-stu-id="1a568-101">Encapsulates the options for the pivot chart.</span></span>
+      <span data-ttu-id="81ac7-101">封装数据透视图的选项。</span><span class="sxs-lookup"><span data-stu-id="81ac7-101">Encapsulates the options for the pivot chart.</span></span>
 
-      <span data-ttu-id="1a568-102">\[[API 集: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="1a568-102">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="81ac7-102">\[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="81ac7-102">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: Excel.Interfaces.ChartPivotOptionsLoadOptions
     fullName: Excel.Interfaces.ChartPivotOptionsLoadOptions
     langs:
       - typeScript
     type: interface
-    package: excel
+    package: excel!
     children:
-      - excel.Excel.Interfaces.ChartPivotOptionsLoadOptions.$all
-      - excel.Excel.Interfaces.ChartPivotOptionsLoadOptions.showAxisFieldButtons
-      - excel.Excel.Interfaces.ChartPivotOptionsLoadOptions.showLegendFieldButtons
-      - excel.Excel.Interfaces.ChartPivotOptionsLoadOptions.showReportFilterFieldButtons
-      - excel.Excel.Interfaces.ChartPivotOptionsLoadOptions.showValueFieldButtons
-  - uid: excel.Excel.Interfaces.ChartPivotOptionsLoadOptions.$all
+      - 'excel!Excel.Interfaces.ChartPivotOptionsLoadOptions#$all:member'
+      - 'excel!Excel.Interfaces.ChartPivotOptionsLoadOptions#showAxisFieldButtons:member'
+      - 'excel!Excel.Interfaces.ChartPivotOptionsLoadOptions#showLegendFieldButtons:member'
+      - 'excel!Excel.Interfaces.ChartPivotOptionsLoadOptions#showReportFilterFieldButtons:member'
+      - 'excel!Excel.Interfaces.ChartPivotOptionsLoadOptions#showValueFieldButtons:member'
+  - uid: 'excel!Excel.Interfaces.ChartPivotOptionsLoadOptions#$all:member'
     name: $all
     fullName: $all
     langs:
@@ -28,11 +28,11 @@ items:
       return:
         type:
           - boolean
-  - uid: excel.Excel.Interfaces.ChartPivotOptionsLoadOptions.showAxisFieldButtons
+  - uid: 'excel!Excel.Interfaces.ChartPivotOptionsLoadOptions#showAxisFieldButtons:member'
     summary: |-
-      <span data-ttu-id="1a568-103">指定是否在数据透视图上显示轴字段按钮。</span><span class="sxs-lookup"><span data-stu-id="1a568-103">Specifies whether or not to display the axis field buttons on a PivotChart.</span></span> <span data-ttu-id="1a568-104">ShowAxisFieldButtons 属性对应于“分析”选项卡（在选择数据透视图时可用）的“字段按钮”下拉列表中的“显示坐标轴字段按钮”命令。</span><span class="sxs-lookup"><span data-stu-id="1a568-104">The ShowAxisFieldButtons property corresponds to the "Show Axis Field Buttons" command on the "Field Buttons" drop-down list of the "Analyze" tab, which is available when a PivotChart is selected.</span></span>
+      <span data-ttu-id="81ac7-103">指定是否在数据透视图上显示轴字段按钮。</span><span class="sxs-lookup"><span data-stu-id="81ac7-103">Specifies whether or not to display the axis field buttons on a PivotChart.</span></span> <span data-ttu-id="81ac7-104">ShowAxisFieldButtons 属性对应于“分析”选项卡（在选择数据透视图时可用）的“字段按钮”下拉列表中的“显示坐标轴字段按钮”命令。</span><span class="sxs-lookup"><span data-stu-id="81ac7-104">The ShowAxisFieldButtons property corresponds to the "Show Axis Field Buttons" command on the "Field Buttons" drop-down list of the "Analyze" tab, which is available when a PivotChart is selected.</span></span>
 
-      <span data-ttu-id="1a568-105">\[[API 集: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="1a568-105">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="81ac7-105">\[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="81ac7-105">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: showAxisFieldButtons
     fullName: showAxisFieldButtons
     langs:
@@ -43,11 +43,11 @@ items:
       return:
         type:
           - boolean
-  - uid: excel.Excel.Interfaces.ChartPivotOptionsLoadOptions.showLegendFieldButtons
+  - uid: 'excel!Excel.Interfaces.ChartPivotOptionsLoadOptions#showLegendFieldButtons:member'
     summary: |-
-      <span data-ttu-id="1a568-106">指定是否在数据透视图上显示图例字段按钮。</span><span class="sxs-lookup"><span data-stu-id="1a568-106">Specifies whether or not to display the legend field buttons on a PivotChart</span></span>
+      <span data-ttu-id="81ac7-106">指定是否在数据透视图上显示图例字段按钮。</span><span class="sxs-lookup"><span data-stu-id="81ac7-106">Specifies whether or not to display the legend field buttons on a PivotChart</span></span>
 
-      <span data-ttu-id="1a568-107">\[[API 集: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="1a568-107">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="81ac7-107">\[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="81ac7-107">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: showLegendFieldButtons
     fullName: showLegendFieldButtons
     langs:
@@ -58,11 +58,11 @@ items:
       return:
         type:
           - boolean
-  - uid: excel.Excel.Interfaces.ChartPivotOptionsLoadOptions.showReportFilterFieldButtons
+  - uid: 'excel!Excel.Interfaces.ChartPivotOptionsLoadOptions#showReportFilterFieldButtons:member'
     summary: |-
-      <span data-ttu-id="1a568-108">指定是否在数据透视图上显示报表筛选字段按钮。</span><span class="sxs-lookup"><span data-stu-id="1a568-108">Specifies whether or not to display the report filter field buttons on a PivotChart.</span></span>
+      <span data-ttu-id="81ac7-108">指定是否在数据透视图上显示报表筛选字段按钮。</span><span class="sxs-lookup"><span data-stu-id="81ac7-108">Specifies whether or not to display the report filter field buttons on a PivotChart.</span></span>
 
-      <span data-ttu-id="1a568-109">\[[API 集: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="1a568-109">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="81ac7-109">\[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="81ac7-109">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: showReportFilterFieldButtons
     fullName: showReportFilterFieldButtons
     langs:
@@ -73,11 +73,11 @@ items:
       return:
         type:
           - boolean
-  - uid: excel.Excel.Interfaces.ChartPivotOptionsLoadOptions.showValueFieldButtons
+  - uid: 'excel!Excel.Interfaces.ChartPivotOptionsLoadOptions#showValueFieldButtons:member'
     summary: |-
-      <span data-ttu-id="1a568-110">指定是否在数据透视图上显示值字段按钮。</span><span class="sxs-lookup"><span data-stu-id="1a568-110">Specifies whether or not to display the show value field buttons on a PivotChart</span></span>
+      <span data-ttu-id="81ac7-110">指定是否在数据透视图上显示值字段按钮。</span><span class="sxs-lookup"><span data-stu-id="81ac7-110">Specifies whether or not to display the show value field buttons on a PivotChart</span></span>
 
-      <span data-ttu-id="1a568-111">\[[API 集: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="1a568-111">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="81ac7-111">\[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="81ac7-111">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: showValueFieldButtons
     fullName: showValueFieldButtons
     langs:
