--- a/docs/docs-ref-autogen/excel_1_9/excel/excel.interfaces.rowcolumnpivothierarchydata.yml
+++ b/docs/docs-ref-autogen/excel_1_9/excel/excel.interfaces.rowcolumnpivothierarchydata.yml
@@ -1,23 +1,23 @@
 ### YamlMime:UniversalReference
 items:
-  - uid: excel.Excel.Interfaces.RowColumnPivotHierarchyData
-    summary: <span data-ttu-id="bb156-101">描述通过调用 "rowColumnPivotHierarchy ()" 返回的数据的接口。</span><span class="sxs-lookup"><span data-stu-id="bb156-101">An interface describing the data returned by calling "rowColumnPivotHierarchy.toJSON()".</span></span>
+  - uid: 'excel!Excel.Interfaces.RowColumnPivotHierarchyData:interface'
+    summary: <span data-ttu-id="88a17-101">描述通过调用 "rowColumnPivotHierarchy （）" 返回的数据的接口。</span><span class="sxs-lookup"><span data-stu-id="88a17-101">An interface describing the data returned by calling "rowColumnPivotHierarchy.toJSON()".</span></span>
     name: Excel.Interfaces.RowColumnPivotHierarchyData
     fullName: Excel.Interfaces.RowColumnPivotHierarchyData
     langs:
       - typeScript
     type: interface
-    package: excel
+    package: excel!
     children:
-      - excel.Excel.Interfaces.RowColumnPivotHierarchyData.fields
-      - excel.Excel.Interfaces.RowColumnPivotHierarchyData.id
-      - excel.Excel.Interfaces.RowColumnPivotHierarchyData.name
-      - excel.Excel.Interfaces.RowColumnPivotHierarchyData.position
-  - uid: excel.Excel.Interfaces.RowColumnPivotHierarchyData.fields
+      - 'excel!Excel.Interfaces.RowColumnPivotHierarchyData#fields:member'
+      - 'excel!Excel.Interfaces.RowColumnPivotHierarchyData#id:member'
+      - 'excel!Excel.Interfaces.RowColumnPivotHierarchyData#name:member'
+      - 'excel!Excel.Interfaces.RowColumnPivotHierarchyData#position:member'
+  - uid: 'excel!Excel.Interfaces.RowColumnPivotHierarchyData#fields:member'
     summary: |-
-      <span data-ttu-id="bb156-102">返回与 RowColumnPivotHierarchy 相关联的 PivotFields。</span><span class="sxs-lookup"><span data-stu-id="bb156-102">Returns the PivotFields associated with the RowColumnPivotHierarchy.</span></span>
+      <span data-ttu-id="88a17-102">返回与 RowColumnPivotHierarchy 相关联的 PivotFields。</span><span class="sxs-lookup"><span data-stu-id="88a17-102">Returns the PivotFields associated with the RowColumnPivotHierarchy.</span></span>
 
-      <span data-ttu-id="bb156-103">\[[API 集: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="bb156-103">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="88a17-103">\[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="88a17-103">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: fields
     fullName: fields
     langs:
@@ -27,12 +27,12 @@ items:
       content: 'fields?: Excel.Interfaces.PivotFieldData[];'
       return:
         type:
-          - 'Excel.Interfaces.PivotFieldData[]'
-  - uid: excel.Excel.Interfaces.RowColumnPivotHierarchyData.id
+          - 'excel!Excel.Interfaces.RowColumnPivotHierarchyData#fields~0:complex'
+  - uid: 'excel!Excel.Interfaces.RowColumnPivotHierarchyData#id:member'
     summary: |-
-      <span data-ttu-id="bb156-104">RowColumnPivotHierarchy 的 ID。</span><span class="sxs-lookup"><span data-stu-id="bb156-104">Id of the RowColumnPivotHierarchy.</span></span>
+      <span data-ttu-id="88a17-104">RowColumnPivotHierarchy 的 ID。</span><span class="sxs-lookup"><span data-stu-id="88a17-104">Id of the RowColumnPivotHierarchy.</span></span>
 
-      <span data-ttu-id="bb156-105">\[[API 集: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="bb156-105">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="88a17-105">\[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="88a17-105">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: id
     fullName: id
     langs:
@@ -43,11 +43,11 @@ items:
       return:
         type:
           - string
-  - uid: excel.Excel.Interfaces.RowColumnPivotHierarchyData.name
+  - uid: 'excel!Excel.Interfaces.RowColumnPivotHierarchyData#name:member'
     summary: |-
-      <span data-ttu-id="bb156-106">RowColumnPivotHierarchy 的名称。</span><span class="sxs-lookup"><span data-stu-id="bb156-106">Name of the RowColumnPivotHierarchy.</span></span>
+      <span data-ttu-id="88a17-106">RowColumnPivotHierarchy 的名称。</span><span class="sxs-lookup"><span data-stu-id="88a17-106">Name of the RowColumnPivotHierarchy.</span></span>
 
-      <span data-ttu-id="bb156-107">\[[API 集: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="bb156-107">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="88a17-107">\[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="88a17-107">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: name
     fullName: name
     langs:
@@ -58,11 +58,11 @@ items:
       return:
         type:
           - string
-  - uid: excel.Excel.Interfaces.RowColumnPivotHierarchyData.position
+  - uid: 'excel!Excel.Interfaces.RowColumnPivotHierarchyData#position:member'
     summary: |-
-      <span data-ttu-id="bb156-108">RowColumnPivotHierarchy 的位置。</span><span class="sxs-lookup"><span data-stu-id="bb156-108">Position of the RowColumnPivotHierarchy.</span></span>
+      <span data-ttu-id="88a17-108">RowColumnPivotHierarchy 的位置。</span><span class="sxs-lookup"><span data-stu-id="88a17-108">Position of the RowColumnPivotHierarchy.</span></span>
 
-      <span data-ttu-id="bb156-109">\[[API 集: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="bb156-109">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="88a17-109">\[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="88a17-109">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: position
     fullName: position
     langs:
@@ -73,3 +73,13 @@ items:
       return:
         type:
           - number
+references:
+  - uid: 'excel!Excel.Interfaces.RowColumnPivotHierarchyData#fields~0:complex'
+    name: 'Excel.Interfaces.PivotFieldData[]'
+    fullName: 'Excel.Interfaces.PivotFieldData[]'
+    spec.typeScript:
+      - uid: 'excel!Excel.Interfaces.PivotFieldData:interface'
+        name: Excel.Interfaces.PivotFieldData
+        fullName: Excel.Interfaces.PivotFieldData
+      - name: '[]'
+        fullName: '[]'
