--- a/docs/docs-ref-autogen/excel_1_9/excel/excel.interfaces.tableupdatedata.yml
+++ b/docs/docs-ref-autogen/excel_1_9/excel/excel.interfaces.tableupdatedata.yml
@@ -1,28 +1,28 @@
 ### YamlMime:UniversalReference
 items:
-  - uid: excel.Excel.Interfaces.TableUpdateData
-    summary: '<span data-ttu-id="e254d-101">一个用于更新 Table 对象上的数据的接口, 可用于 "table. set (</span><span class="sxs-lookup"><span data-stu-id="e254d-101">An interface for updating data on the Table object, for use in "table.set(</span></span><!-- --><span data-ttu-id="e254d-102">{ ... }</span><span class="sxs-lookup"><span data-stu-id="e254d-102"></span></span><!-- --><span data-ttu-id="e254d-103">)".</span><span class="sxs-lookup"><span data-stu-id="e254d-103"></span></span>'
+  - uid: 'excel!Excel.Interfaces.TableUpdateData:interface'
+    summary: '<span data-ttu-id="240aa-101">一个用于更新 Table 对象上的数据的接口，可用于 "table. set （</span><span class="sxs-lookup"><span data-stu-id="240aa-101">An interface for updating data on the Table object, for use in "table.set(</span></span><!-- --><span data-ttu-id="240aa-102">{ ... }</span><span class="sxs-lookup"><span data-stu-id="240aa-102"></span></span><!-- --><span data-ttu-id="240aa-103">)".</span><span class="sxs-lookup"><span data-stu-id="240aa-103"></span></span>'
     name: Excel.Interfaces.TableUpdateData
     fullName: Excel.Interfaces.TableUpdateData
     langs:
       - typeScript
     type: interface
-    package: excel
+    package: excel!
     children:
-      - excel.Excel.Interfaces.TableUpdateData.highlightFirstColumn
-      - excel.Excel.Interfaces.TableUpdateData.highlightLastColumn
-      - excel.Excel.Interfaces.TableUpdateData.name
-      - excel.Excel.Interfaces.TableUpdateData.showBandedColumns
-      - excel.Excel.Interfaces.TableUpdateData.showBandedRows
-      - excel.Excel.Interfaces.TableUpdateData.showFilterButton
-      - excel.Excel.Interfaces.TableUpdateData.showHeaders
-      - excel.Excel.Interfaces.TableUpdateData.showTotals
-      - excel.Excel.Interfaces.TableUpdateData.style
-  - uid: excel.Excel.Interfaces.TableUpdateData.highlightFirstColumn
+      - 'excel!Excel.Interfaces.TableUpdateData#highlightFirstColumn:member'
+      - 'excel!Excel.Interfaces.TableUpdateData#highlightLastColumn:member'
+      - 'excel!Excel.Interfaces.TableUpdateData#name:member'
+      - 'excel!Excel.Interfaces.TableUpdateData#showBandedColumns:member'
+      - 'excel!Excel.Interfaces.TableUpdateData#showBandedRows:member'
+      - 'excel!Excel.Interfaces.TableUpdateData#showFilterButton:member'
+      - 'excel!Excel.Interfaces.TableUpdateData#showHeaders:member'
+      - 'excel!Excel.Interfaces.TableUpdateData#showTotals:member'
+      - 'excel!Excel.Interfaces.TableUpdateData#style:member'
+  - uid: 'excel!Excel.Interfaces.TableUpdateData#highlightFirstColumn:member'
     summary: |-
-      <span data-ttu-id="e254d-104">指明第一列是否包含特殊格式。</span><span class="sxs-lookup"><span data-stu-id="e254d-104">Indicates whether the first column contains special formatting.</span></span>
+      <span data-ttu-id="240aa-104">指明第一列是否包含特殊格式。</span><span class="sxs-lookup"><span data-stu-id="240aa-104">Indicates whether the first column contains special formatting.</span></span>
 
-      <span data-ttu-id="e254d-105">\[[API 集: ExcelApi 1.3](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="e254d-105">\[ [API set: ExcelApi 1.3](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="240aa-105">\[[API 集： ExcelApi 1.3](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="240aa-105">\[ [API set: ExcelApi 1.3](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: highlightFirstColumn
     fullName: highlightFirstColumn
     langs:
@@ -33,11 +33,11 @@ items:
       return:
         type:
           - boolean
-  - uid: excel.Excel.Interfaces.TableUpdateData.highlightLastColumn
+  - uid: 'excel!Excel.Interfaces.TableUpdateData#highlightLastColumn:member'
     summary: |-
-      <span data-ttu-id="e254d-106">指明最后一列是否包含特殊格式。</span><span class="sxs-lookup"><span data-stu-id="e254d-106">Indicates whether the last column contains special formatting.</span></span>
+      <span data-ttu-id="240aa-106">指明最后一列是否包含特殊格式。</span><span class="sxs-lookup"><span data-stu-id="240aa-106">Indicates whether the last column contains special formatting.</span></span>
 
-      <span data-ttu-id="e254d-107">\[[API 集: ExcelApi 1.3](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="e254d-107">\[ [API set: ExcelApi 1.3](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="240aa-107">\[[API 集： ExcelApi 1.3](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="240aa-107">\[ [API set: ExcelApi 1.3](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: highlightLastColumn
     fullName: highlightLastColumn
     langs:
@@ -48,11 +48,11 @@ items:
       return:
         type:
           - boolean
-  - uid: excel.Excel.Interfaces.TableUpdateData.name
+  - uid: 'excel!Excel.Interfaces.TableUpdateData#name:member'
     summary: |-
-      <span data-ttu-id="e254d-108">表的名称。</span><span class="sxs-lookup"><span data-stu-id="e254d-108">Name of the table.</span></span>
+      <span data-ttu-id="240aa-108">表的名称。</span><span class="sxs-lookup"><span data-stu-id="240aa-108">Name of the table.</span></span>
 
-      <span data-ttu-id="e254d-109">\[[API 集: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="e254d-109">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="240aa-109">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="240aa-109">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: name
     fullName: name
     langs:
@@ -63,11 +63,11 @@ items:
       return:
         type:
           - string
-  - uid: excel.Excel.Interfaces.TableUpdateData.showBandedColumns
+  - uid: 'excel!Excel.Interfaces.TableUpdateData#showBandedColumns:member'
     summary: |-
-      <span data-ttu-id="e254d-110">指明列是否采用镶边格式来以不同的方式突出显示奇数列与偶数列，让表更易于阅读。</span><span class="sxs-lookup"><span data-stu-id="e254d-110">Indicates whether the columns show banded formatting in which odd columns are highlighted differently from even ones to make reading the table easier.</span></span>
+      <span data-ttu-id="240aa-110">指明列是否采用镶边格式来以不同的方式突出显示奇数列与偶数列，让表更易于阅读。</span><span class="sxs-lookup"><span data-stu-id="240aa-110">Indicates whether the columns show banded formatting in which odd columns are highlighted differently from even ones to make reading the table easier.</span></span>
 
-      <span data-ttu-id="e254d-111">\[[API 集: ExcelApi 1.3](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="e254d-111">\[ [API set: ExcelApi 1.3](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="240aa-111">\[[API 集： ExcelApi 1.3](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="240aa-111">\[ [API set: ExcelApi 1.3](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: showBandedColumns
     fullName: showBandedColumns
     langs:
@@ -78,11 +78,11 @@ items:
       return:
         type:
           - boolean
-  - uid: excel.Excel.Interfaces.TableUpdateData.showBandedRows
+  - uid: 'excel!Excel.Interfaces.TableUpdateData#showBandedRows:member'
     summary: |-
-      <span data-ttu-id="e254d-112">指明行是否采用镶边格式来以不同的方式突出显示奇数行与偶数行，让表更易于阅读。</span><span class="sxs-lookup"><span data-stu-id="e254d-112">Indicates whether the rows show banded formatting in which odd rows are highlighted differently from even ones to make reading the table easier.</span></span>
+      <span data-ttu-id="240aa-112">指明行是否采用镶边格式来以不同的方式突出显示奇数行与偶数行，让表更易于阅读。</span><span class="sxs-lookup"><span data-stu-id="240aa-112">Indicates whether the rows show banded formatting in which odd rows are highlighted differently from even ones to make reading the table easier.</span></span>
 
-      <span data-ttu-id="e254d-113">\[[API 集: ExcelApi 1.3](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="e254d-113">\[ [API set: ExcelApi 1.3](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="240aa-113">\[[API 集： ExcelApi 1.3](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="240aa-113">\[ [API set: ExcelApi 1.3](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: showBandedRows
     fullName: showBandedRows
     langs:
@@ -93,11 +93,11 @@ items:
       return:
         type:
           - boolean
-  - uid: excel.Excel.Interfaces.TableUpdateData.showFilterButton
+  - uid: 'excel!Excel.Interfaces.TableUpdateData#showFilterButton:member'
     summary: |-
-      <span data-ttu-id="e254d-p101">指明是否在每个列标题的顶部显示筛选器按钮。仅当 table 中包含标题行时，才允许设定此设置。</span><span class="sxs-lookup"><span data-stu-id="e254d-p101">Indicates whether the filter buttons are visible at the top of each column header. Setting this is only allowed if the table contains a header row.</span></span>
+      <span data-ttu-id="240aa-p101">指明是否在每个列标题的顶部显示筛选器按钮。仅当 table 中包含标题行时，才允许设定此设置。</span><span class="sxs-lookup"><span data-stu-id="240aa-p101">Indicates whether the filter buttons are visible at the top of each column header. Setting this is only allowed if the table contains a header row.</span></span>
 
-      <span data-ttu-id="e254d-116">\[[API 集: ExcelApi 1.3](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="e254d-116">\[ [API set: ExcelApi 1.3](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="240aa-116">\[[API 集： ExcelApi 1.3](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="240aa-116">\[ [API set: ExcelApi 1.3](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: showFilterButton
     fullName: showFilterButton
     langs:
@@ -108,11 +108,11 @@ items:
       return:
         type:
           - boolean
-  - uid: excel.Excel.Interfaces.TableUpdateData.showHeaders
+  - uid: 'excel!Excel.Interfaces.TableUpdateData#showHeaders:member'
     summary: |-
-      <span data-ttu-id="e254d-117">指示标头行是否可见。</span><span class="sxs-lookup"><span data-stu-id="e254d-117">Indicates whether the header row is visible or not.</span></span> <span data-ttu-id="e254d-118">该值可以设置为显示或删除标头行。</span><span class="sxs-lookup"><span data-stu-id="e254d-118">This value can be set to show or remove the header row.</span></span>
+      <span data-ttu-id="240aa-117">指示标头行是否可见。</span><span class="sxs-lookup"><span data-stu-id="240aa-117">Indicates whether the header row is visible or not.</span></span> <span data-ttu-id="240aa-118">该值可以设置为显示或删除标头行。</span><span class="sxs-lookup"><span data-stu-id="240aa-118">This value can be set to show or remove the header row.</span></span>
 
-      <span data-ttu-id="e254d-119">\[[API 集: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="e254d-119">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="240aa-119">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="240aa-119">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: showHeaders
     fullName: showHeaders
     langs:
@@ -123,11 +123,11 @@ items:
       return:
         type:
           - boolean
-  - uid: excel.Excel.Interfaces.TableUpdateData.showTotals
+  - uid: 'excel!Excel.Interfaces.TableUpdateData#showTotals:member'
     summary: |-
-      <span data-ttu-id="e254d-120">指示总计行是否可见。</span><span class="sxs-lookup"><span data-stu-id="e254d-120">Indicates whether the total row is visible or not.</span></span> <span data-ttu-id="e254d-121">该值可以设置为显示或删除总计行。</span><span class="sxs-lookup"><span data-stu-id="e254d-121">This value can be set to show or remove the total row.</span></span>
+      <span data-ttu-id="240aa-120">指示总计行是否可见。</span><span class="sxs-lookup"><span data-stu-id="240aa-120">Indicates whether the total row is visible or not.</span></span> <span data-ttu-id="240aa-121">该值可以设置为显示或删除总计行。</span><span class="sxs-lookup"><span data-stu-id="240aa-121">This value can be set to show or remove the total row.</span></span>
 
-      <span data-ttu-id="e254d-122">\[[API 集: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="e254d-122">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="240aa-122">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="240aa-122">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: showTotals
     fullName: showTotals
     langs:
@@ -138,11 +138,11 @@ items:
       return:
         type:
           - boolean
-  - uid: excel.Excel.Interfaces.TableUpdateData.style
+  - uid: 'excel!Excel.Interfaces.TableUpdateData#style:member'
     summary: |-
-      <span data-ttu-id="e254d-p104">表示表格样式的常量值。可能的值是：TableStyleLight1 thru TableStyleLight21、TableStyleMedium1 thru TableStyleMedium28、TableStyleStyleDark1 thru TableStyleStyleDark11。还可以指定工作簿中显示的用户定义的自定义样式。</span><span class="sxs-lookup"><span data-stu-id="e254d-p104">Constant value that represents the Table style. Possible values are: TableStyleLight1 thru TableStyleLight21, TableStyleMedium1 thru TableStyleMedium28, TableStyleStyleDark1 thru TableStyleStyleDark11. A custom user-defined style present in the workbook can also be specified.</span></span>
+      <span data-ttu-id="240aa-p104">表示表格样式的常量值。可能的值是：TableStyleLight1 thru TableStyleLight21、TableStyleMedium1 thru TableStyleMedium28、TableStyleStyleDark1 thru TableStyleStyleDark11。还可以指定工作簿中显示的用户定义的自定义样式。</span><span class="sxs-lookup"><span data-stu-id="240aa-p104">Constant value that represents the Table style. Possible values are: TableStyleLight1 thru TableStyleLight21, TableStyleMedium1 thru TableStyleMedium28, TableStyleStyleDark1 thru TableStyleStyleDark11. A custom user-defined style present in the workbook can also be specified.</span></span>
 
-      <span data-ttu-id="e254d-126">\[[API 集: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="e254d-126">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="240aa-126">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="240aa-126">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: style
     fullName: style
     langs:
