--- a/docs/docs-ref-autogen/outlook/outlook/office.recipientschangedfields.yml
+++ b/docs/docs-ref-autogen/outlook/outlook/office.recipientschangedfields.yml
@@ -1,25 +1,25 @@
 ### YamlMime:UniversalReference
 items:
-  - uid: outlook.Office.RecipientsChangedFields
+  - uid: 'outlook!Office.RecipientsChangedFields:interface'
     summary: |-
-      <span data-ttu-id="fbb8b-101">代表`RecipientsChangedEventArgs.changedRecipientsFields`对象。</span><span class="sxs-lookup"><span data-stu-id="fbb8b-101">Represents `RecipientsChangedEventArgs.changedRecipientsFields` object.</span></span>
+      <span data-ttu-id="ad223-101">代表`RecipientsChangedEventArgs.changedRecipientsFields`对象。</span><span class="sxs-lookup"><span data-stu-id="ad223-101">Represents `RecipientsChangedEventArgs.changedRecipientsFields` object.</span></span>
 
-      <span data-ttu-id="fbb8b-102">\[[API 集: 邮箱 1.7](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="fbb8b-102">\[ [API set: Mailbox 1.7](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="ad223-102">\[[API 集：邮箱 1.7](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="ad223-102">\[ [API set: Mailbox 1.7](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets) \]</span></span>
     name: Office.RecipientsChangedFields
     fullName: Office.RecipientsChangedFields
     langs:
       - typeScript
     type: interface
-    package: outlook
+    package: outlook!
     children:
-      - outlook.Office.RecipientsChangedFields.optionalAttendees
-      - outlook.Office.RecipientsChangedFields.requiredAttendees
-      - outlook.Office.RecipientsChangedFields.resources
-  - uid: outlook.Office.RecipientsChangedFields.optionalAttendees
+      - 'outlook!Office.RecipientsChangedFields#optionalAttendees:member'
+      - 'outlook!Office.RecipientsChangedFields#requiredAttendees:member'
+      - 'outlook!Office.RecipientsChangedFields#resources:member'
+  - uid: 'outlook!Office.RecipientsChangedFields#optionalAttendees:member'
     summary: |-
-      <span data-ttu-id="fbb8b-103">获取可选的与会者是否已更改。</span><span class="sxs-lookup"><span data-stu-id="fbb8b-103">Gets if optional attendees were changed.</span></span>
+      <span data-ttu-id="ad223-103">获取可选的与会者是否已更改。</span><span class="sxs-lookup"><span data-stu-id="ad223-103">Gets if optional attendees were changed.</span></span>
 
-      <span data-ttu-id="fbb8b-104">\[[API 集: 邮箱 1.7](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="fbb8b-104">\[ [API set: Mailbox 1.7](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="ad223-104">\[[API 集：邮箱 1.7](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="ad223-104">\[ [API set: Mailbox 1.7](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets) \]</span></span>
     name: optionalAttendees
     fullName: optionalAttendees
     langs:
@@ -30,11 +30,11 @@ items:
       return:
         type:
           - boolean
-  - uid: outlook.Office.RecipientsChangedFields.requiredAttendees
+  - uid: 'outlook!Office.RecipientsChangedFields#requiredAttendees:member'
     summary: |-
-      <span data-ttu-id="fbb8b-105">获取所需与会者是否已更改。</span><span class="sxs-lookup"><span data-stu-id="fbb8b-105">Gets if required attendees were changed.</span></span>
+      <span data-ttu-id="ad223-105">获取所需与会者是否已更改。</span><span class="sxs-lookup"><span data-stu-id="ad223-105">Gets if required attendees were changed.</span></span>
 
-      <span data-ttu-id="fbb8b-106">\[[API 集: 邮箱 1.7](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="fbb8b-106">\[ [API set: Mailbox 1.7](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="ad223-106">\[[API 集：邮箱 1.7](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="ad223-106">\[ [API set: Mailbox 1.7](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets) \]</span></span>
     name: requiredAttendees
     fullName: requiredAttendees
     langs:
@@ -45,11 +45,11 @@ items:
       return:
         type:
           - boolean
-  - uid: outlook.Office.RecipientsChangedFields.resources
+  - uid: 'outlook!Office.RecipientsChangedFields#resources:member'
     summary: |-
-      <span data-ttu-id="fbb8b-107">获取是否更改了资源。</span><span class="sxs-lookup"><span data-stu-id="fbb8b-107">Gets if resources were changed.</span></span>
+      <span data-ttu-id="ad223-107">获取是否更改了资源。</span><span class="sxs-lookup"><span data-stu-id="ad223-107">Gets if resources were changed.</span></span>
 
-      <span data-ttu-id="fbb8b-108">\[[API 集: 邮箱 1.7](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="fbb8b-108">\[ [API set: Mailbox 1.7](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="ad223-108">\[[API 集：邮箱 1.7](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="ad223-108">\[ [API set: Mailbox 1.7](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets) \]</span></span>
     name: resources
     fullName: resources
     langs:
