--- a/docs/docs-ref-autogen/excel_1_9/excel/excel.calculationtype.yml
+++ b/docs/docs-ref-autogen/excel_1_9/excel/excel.calculationtype.yml
@@ -1,35 +1,35 @@
 ### YamlMime:UniversalReference
 items:
-  - uid: excel.Excel.CalculationType
-    summary: '<span data-ttu-id="fead3-101">\[[API 集: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="fead3-101">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>'
+  - uid: 'excel!Excel.CalculationType:enum'
+    summary: '<span data-ttu-id="11093-101">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="11093-101">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>'
     name: Excel.CalculationType
     fullName: Excel.CalculationType
     langs:
       - typeScript
     type: enum
-    package: excel
+    package: excel!
     children:
-      - excel.Excel.CalculationType.full
-      - excel.Excel.CalculationType.fullRebuild
-      - excel.Excel.CalculationType.recalculate
-  - uid: excel.Excel.CalculationType.full
-    summary: <span data-ttu-id="fead3-102">：这会将所有单元格都标记为脏，然后重新计算所有单元格。</span><span class="sxs-lookup"><span data-stu-id="fead3-102">This will mark all cells as dirty and then recalculate them.</span></span>
+      - 'excel!Excel.CalculationType.full:member'
+      - 'excel!Excel.CalculationType.fullRebuild:member'
+      - 'excel!Excel.CalculationType.recalculate:member'
+  - uid: 'excel!Excel.CalculationType.full:member'
+    summary: <span data-ttu-id="11093-102">：这会将所有单元格都标记为脏，然后重新计算所有单元格。</span><span class="sxs-lookup"><span data-stu-id="11093-102">This will mark all cells as dirty and then recalculate them.</span></span>
     name: full
     fullName: full
     langs:
       - typeScript
     type: field
     numericValue: '"Full"'
-  - uid: excel.Excel.CalculationType.fullRebuild
-    summary: '<span data-ttu-id="fead3-103">这将重新生成整个依赖关系链, 将所有单元格标记为已更新, 然后重新进行计算。</span><span class="sxs-lookup"><span data-stu-id="fead3-103">This will rebuild the full dependency chain, mark all cells as dirty and then recalculate them.</span></span>'
+  - uid: 'excel!Excel.CalculationType.fullRebuild:member'
+    summary: '<span data-ttu-id="11093-103">这将重新生成整个依赖关系链，将所有单元格标记为已更新，然后重新进行计算。</span><span class="sxs-lookup"><span data-stu-id="11093-103">This will rebuild the full dependency chain, mark all cells as dirty and then recalculate them.</span></span>'
     name: fullRebuild
     fullName: fullRebuild
     langs:
       - typeScript
     type: field
     numericValue: '"FullRebuild"'
-  - uid: excel.Excel.CalculationType.recalculate
-    summary: '<span data-ttu-id="fead3-104">重新计算 Excel 已标记为脏的所有单元格（即可变或已更改的数据的从属单元格），以及以编程方式标记为脏的单元格。</span><span class="sxs-lookup"><span data-stu-id="fead3-104">Recalculates all cells that Excel has marked as dirty, that is, dependents of volatile or changed data, and cells programmatically marked as dirty.</span></span>'
+  - uid: 'excel!Excel.CalculationType.recalculate:member'
+    summary: '<span data-ttu-id="11093-104">重新计算 Excel 已标记为脏的所有单元格（即可变或已更改的数据的从属单元格），以及以编程方式标记为脏的单元格。</span><span class="sxs-lookup"><span data-stu-id="11093-104">Recalculates all cells that Excel has marked as dirty, that is, dependents of volatile or changed data, and cells programmatically marked as dirty.</span></span>'
     name: recalculate
     fullName: recalculate
     langs:
