--- a/docs/docs-ref-autogen/excel_1_9/excel/excel.cellpropertiesfont.yml
+++ b/docs/docs-ref-autogen/excel_1_9/excel/excel.cellpropertiesfont.yml
@@ -1,32 +1,32 @@
 ### YamlMime:UniversalReference
 items:
-  - uid: excel.Excel.CellPropertiesFont
+  - uid: 'excel!Excel.CellPropertiesFont:interface'
     summary: |-
-      <span data-ttu-id="be9ea-101">表示的`format.font`属性`getCellProperties`</span><span class="sxs-lookup"><span data-stu-id="be9ea-101">Represents the `format.font` properties of `getCellProperties`</span></span><!-- --><span data-ttu-id="be9ea-102">, `getRowProperties`</span><span class="sxs-lookup"><span data-stu-id="be9ea-102"></span></span><!-- --><span data-ttu-id="be9ea-103">, 和`getColumnProperties`或的`format.font`输入参数`setCellProperties`</span><span class="sxs-lookup"><span data-stu-id="be9ea-103">, and `getColumnProperties` or the `format.font` input parameter of `setCellProperties`</span></span><!-- --><span data-ttu-id="be9ea-104">, `setRowProperties`</span><span class="sxs-lookup"><span data-stu-id="be9ea-104"></span></span><!-- --><span data-ttu-id="be9ea-105">, 并`setColumnProperties`</span><span class="sxs-lookup"><span data-stu-id="be9ea-105">, and `setColumnProperties`</span></span><!-- --><span data-ttu-id="be9ea-106">.</span><span class="sxs-lookup"><span data-stu-id="be9ea-106"></span></span>
+      <span data-ttu-id="a92df-101">表示的`format.font`属性`getCellProperties`</span><span class="sxs-lookup"><span data-stu-id="a92df-101">Represents the `format.font` properties of `getCellProperties`</span></span><!-- --><span data-ttu-id="a92df-102">, `getRowProperties`</span><span class="sxs-lookup"><span data-stu-id="a92df-102"></span></span><!-- --><span data-ttu-id="a92df-103">，和`getColumnProperties`或的`format.font`输入参数`setCellProperties`</span><span class="sxs-lookup"><span data-stu-id="a92df-103">, and `getColumnProperties` or the `format.font` input parameter of `setCellProperties`</span></span><!-- --><span data-ttu-id="a92df-104">, `setRowProperties`</span><span class="sxs-lookup"><span data-stu-id="a92df-104"></span></span><!-- --><span data-ttu-id="a92df-105">，并`setColumnProperties`</span><span class="sxs-lookup"><span data-stu-id="a92df-105">, and `setColumnProperties`</span></span><!-- --><span data-ttu-id="a92df-106">.</span><span class="sxs-lookup"><span data-stu-id="a92df-106"></span></span>
 
-      <span data-ttu-id="be9ea-107">\[[API 集: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="be9ea-107">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="a92df-107">\[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="a92df-107">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: Excel.CellPropertiesFont
     fullName: Excel.CellPropertiesFont
     langs:
       - typeScript
     type: interface
-    package: excel
+    package: excel!
     children:
-      - excel.Excel.CellPropertiesFont.bold
-      - excel.Excel.CellPropertiesFont.color
-      - excel.Excel.CellPropertiesFont.italic
-      - excel.Excel.CellPropertiesFont.name
-      - excel.Excel.CellPropertiesFont.size
-      - excel.Excel.CellPropertiesFont.strikethrough
-      - excel.Excel.CellPropertiesFont.subscript
-      - excel.Excel.CellPropertiesFont.superscript
-      - excel.Excel.CellPropertiesFont.tintAndShade
-      - excel.Excel.CellPropertiesFont.underline
-  - uid: excel.Excel.CellPropertiesFont.bold
+      - 'excel!Excel.CellPropertiesFont#bold:member'
+      - 'excel!Excel.CellPropertiesFont#color:member'
+      - 'excel!Excel.CellPropertiesFont#italic:member'
+      - 'excel!Excel.CellPropertiesFont#name:member'
+      - 'excel!Excel.CellPropertiesFont#size:member'
+      - 'excel!Excel.CellPropertiesFont#strikethrough:member'
+      - 'excel!Excel.CellPropertiesFont#subscript:member'
+      - 'excel!Excel.CellPropertiesFont#superscript:member'
+      - 'excel!Excel.CellPropertiesFont#tintAndShade:member'
+      - 'excel!Excel.CellPropertiesFont#underline:member'
+  - uid: 'excel!Excel.CellPropertiesFont#bold:member'
     summary: |-
-      <span data-ttu-id="be9ea-108">表示`format.font.bold`属性。</span><span class="sxs-lookup"><span data-stu-id="be9ea-108">Represents the `format.font.bold` property.</span></span>
+      <span data-ttu-id="a92df-108">表示`format.font.bold`属性。</span><span class="sxs-lookup"><span data-stu-id="a92df-108">Represents the `format.font.bold` property.</span></span>
 
-      <span data-ttu-id="be9ea-109">\[[API 集: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="be9ea-109">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="a92df-109">\[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="a92df-109">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: bold
     fullName: bold
     langs:
@@ -37,11 +37,11 @@ items:
       return:
         type:
           - boolean
-  - uid: excel.Excel.CellPropertiesFont.color
+  - uid: 'excel!Excel.CellPropertiesFont#color:member'
     summary: |-
-      <span data-ttu-id="be9ea-110">表示`format.font.color`属性。</span><span class="sxs-lookup"><span data-stu-id="be9ea-110">Represents the `format.font.color` property.</span></span>
+      <span data-ttu-id="a92df-110">表示`format.font.color`属性。</span><span class="sxs-lookup"><span data-stu-id="a92df-110">Represents the `format.font.color` property.</span></span>
 
-      <span data-ttu-id="be9ea-111">\[[API 集: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="be9ea-111">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="a92df-111">\[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="a92df-111">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: color
     fullName: color
     langs:
@@ -55,7 +55,7 @@ items:
         description: |-
 
 
-          #### <a name="examples"></a><span data-ttu-id="be9ea-112">示例</span><span class="sxs-lookup"><span data-stu-id="be9ea-112">Examples</span></span>
+          #### <a name="examples"></a><span data-ttu-id="a92df-112">示例</span><span class="sxs-lookup"><span data-stu-id="a92df-112">Examples</span></span>
 
           ```typescript
           await Excel.run(async (context) => {
@@ -129,11 +129,11 @@ items:
               await context.sync();
           });
           ```
-  - uid: excel.Excel.CellPropertiesFont.italic
+  - uid: 'excel!Excel.CellPropertiesFont#italic:member'
     summary: |-
-      <span data-ttu-id="be9ea-113">表示`format.font.italic`属性。</span><span class="sxs-lookup"><span data-stu-id="be9ea-113">Represents the `format.font.italic` property.</span></span>
+      <span data-ttu-id="a92df-113">表示`format.font.italic`属性。</span><span class="sxs-lookup"><span data-stu-id="a92df-113">Represents the `format.font.italic` property.</span></span>
 
-      <span data-ttu-id="be9ea-114">\[[API 集: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="be9ea-114">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="a92df-114">\[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="a92df-114">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: italic
     fullName: italic
     langs:
@@ -144,11 +144,11 @@ items:
       return:
         type:
           - boolean
-  - uid: excel.Excel.CellPropertiesFont.name
+  - uid: 'excel!Excel.CellPropertiesFont#name:member'
     summary: |-
-      <span data-ttu-id="be9ea-115">表示`format.font.name`属性。</span><span class="sxs-lookup"><span data-stu-id="be9ea-115">Represents the `format.font.name` property.</span></span>
+      <span data-ttu-id="a92df-115">表示`format.font.name`属性。</span><span class="sxs-lookup"><span data-stu-id="a92df-115">Represents the `format.font.name` property.</span></span>
 
-      <span data-ttu-id="be9ea-116">\[[API 集: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="be9ea-116">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="a92df-116">\[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="a92df-116">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: name
     fullName: name
     langs:
@@ -159,11 +159,11 @@ items:
       return:
         type:
           - string
-  - uid: excel.Excel.CellPropertiesFont.size
+  - uid: 'excel!Excel.CellPropertiesFont#size:member'
     summary: |-
-      <span data-ttu-id="be9ea-117">表示`format.font.size`属性。</span><span class="sxs-lookup"><span data-stu-id="be9ea-117">Represents the `format.font.size` property.</span></span>
+      <span data-ttu-id="a92df-117">表示`format.font.size`属性。</span><span class="sxs-lookup"><span data-stu-id="a92df-117">Represents the `format.font.size` property.</span></span>
 
-      <span data-ttu-id="be9ea-118">\[[API 集: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="be9ea-118">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="a92df-118">\[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="a92df-118">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: size
     fullName: size
     langs:
@@ -174,11 +174,11 @@ items:
       return:
         type:
           - number
-  - uid: excel.Excel.CellPropertiesFont.strikethrough
+  - uid: 'excel!Excel.CellPropertiesFont#strikethrough:member'
     summary: |-
-      <span data-ttu-id="be9ea-119">表示`format.font.strikethrough`属性。</span><span class="sxs-lookup"><span data-stu-id="be9ea-119">Represents the `format.font.strikethrough` property.</span></span>
+      <span data-ttu-id="a92df-119">表示`format.font.strikethrough`属性。</span><span class="sxs-lookup"><span data-stu-id="a92df-119">Represents the `format.font.strikethrough` property.</span></span>
 
-      <span data-ttu-id="be9ea-120">\[[API 集: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="be9ea-120">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="a92df-120">\[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="a92df-120">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: strikethrough
     fullName: strikethrough
     langs:
@@ -189,11 +189,11 @@ items:
       return:
         type:
           - boolean
-  - uid: excel.Excel.CellPropertiesFont.subscript
+  - uid: 'excel!Excel.CellPropertiesFont#subscript:member'
     summary: |-
-      <span data-ttu-id="be9ea-121">表示`format.font.subscript`属性。</span><span class="sxs-lookup"><span data-stu-id="be9ea-121">Represents the `format.font.subscript` property.</span></span>
+      <span data-ttu-id="a92df-121">表示`format.font.subscript`属性。</span><span class="sxs-lookup"><span data-stu-id="a92df-121">Represents the `format.font.subscript` property.</span></span>
 
-      <span data-ttu-id="be9ea-122">\[[API 集: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="be9ea-122">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="a92df-122">\[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="a92df-122">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: subscript
     fullName: subscript
     langs:
@@ -204,11 +204,11 @@ items:
       return:
         type:
           - boolean
-  - uid: excel.Excel.CellPropertiesFont.superscript
+  - uid: 'excel!Excel.CellPropertiesFont#superscript:member'
     summary: |-
-      <span data-ttu-id="be9ea-123">表示`format.font.superscript`属性。</span><span class="sxs-lookup"><span data-stu-id="be9ea-123">Represents the `format.font.superscript` property.</span></span>
+      <span data-ttu-id="a92df-123">表示`format.font.superscript`属性。</span><span class="sxs-lookup"><span data-stu-id="a92df-123">Represents the `format.font.superscript` property.</span></span>
 
-      <span data-ttu-id="be9ea-124">\[[API 集: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="be9ea-124">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="a92df-124">\[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="a92df-124">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: superscript
     fullName: superscript
     langs:
@@ -219,11 +219,11 @@ items:
       return:
         type:
           - boolean
-  - uid: excel.Excel.CellPropertiesFont.tintAndShade
+  - uid: 'excel!Excel.CellPropertiesFont#tintAndShade:member'
     summary: |-
-      <span data-ttu-id="be9ea-125">表示`format.font.tintAndShade`属性。</span><span class="sxs-lookup"><span data-stu-id="be9ea-125">Represents the `format.font.tintAndShade` property.</span></span>
+      <span data-ttu-id="a92df-125">表示`format.font.tintAndShade`属性。</span><span class="sxs-lookup"><span data-stu-id="a92df-125">Represents the `format.font.tintAndShade` property.</span></span>
 
-      <span data-ttu-id="be9ea-126">\[[API 集: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="be9ea-126">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="a92df-126">\[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="a92df-126">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: tintAndShade
     fullName: tintAndShade
     langs:
@@ -234,11 +234,11 @@ items:
       return:
         type:
           - number
-  - uid: excel.Excel.CellPropertiesFont.underline
+  - uid: 'excel!Excel.CellPropertiesFont#underline:member'
     summary: |-
-      <span data-ttu-id="be9ea-127">表示`format.font.underline`属性。</span><span class="sxs-lookup"><span data-stu-id="be9ea-127">Represents the `format.font.underline` property.</span></span>
+      <span data-ttu-id="a92df-127">表示`format.font.underline`属性。</span><span class="sxs-lookup"><span data-stu-id="a92df-127">Represents the `format.font.underline` property.</span></span>
 
-      <span data-ttu-id="be9ea-128">\[[API 集: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="be9ea-128">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="a92df-128">\[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="a92df-128">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: underline
     fullName: underline
     langs:
@@ -248,4 +248,14 @@ items:
       content: 'underline?: Excel.RangeUnderlineStyle | "None" | "Single" | "Double" | "SingleAccountant" | "DoubleAccountant";'
       return:
         type:
-          - Excel.RangeUnderlineStyle | "None" | "Single" | "Double" | "SingleAccountant" | "DoubleAccountant"
+          - 'excel!Excel.CellPropertiesFont#underline~0:complex'
+references:
+  - uid: 'excel!Excel.CellPropertiesFont#underline~0:complex'
+    name: Excel.RangeUnderlineStyle | "None" | "Single" | "Double" | "SingleAccountant" | "DoubleAccountant"
+    fullName: Excel.RangeUnderlineStyle | "None" | "Single" | "Double" | "SingleAccountant" | "DoubleAccountant"
+    spec.typeScript:
+      - uid: 'excel!Excel.RangeUnderlineStyle:enum'
+        name: Excel.RangeUnderlineStyle
+        fullName: Excel.RangeUnderlineStyle
+      - name: ' | "None" | "Single" | "Double" | "SingleAccountant" | "DoubleAccountant"'
+        fullName: ' | "None" | "Single" | "Double" | "SingleAccountant" | "DoubleAccountant"'
