--- a/docs/docs-ref-autogen/excel_1_9/excel/excel.conditionalrangefontunderlinestyle.yml
+++ b/docs/docs-ref-autogen/excel_1_9/excel/excel.conditionalrangefontunderlinestyle.yml
@@ -1,32 +1,32 @@
 ### YamlMime:UniversalReference
 items:
-  - uid: excel.Excel.ConditionalRangeFontUnderlineStyle
-    summary: '<span data-ttu-id="d6a19-101">\[[API 集: ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="d6a19-101">\[ [API set: ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>'
+  - uid: 'excel!Excel.ConditionalRangeFontUnderlineStyle:enum'
+    summary: '<span data-ttu-id="69c40-101">\[[API 集： ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="69c40-101">\[ [API set: ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>'
     name: Excel.ConditionalRangeFontUnderlineStyle
     fullName: Excel.ConditionalRangeFontUnderlineStyle
     langs:
       - typeScript
     type: enum
-    package: excel
+    package: excel!
     children:
-      - excel.Excel.ConditionalRangeFontUnderlineStyle.double
-      - excel.Excel.ConditionalRangeFontUnderlineStyle.none
-      - excel.Excel.ConditionalRangeFontUnderlineStyle.single
-  - uid: excel.Excel.ConditionalRangeFontUnderlineStyle.double
+      - 'excel!Excel.ConditionalRangeFontUnderlineStyle.double:member'
+      - 'excel!Excel.ConditionalRangeFontUnderlineStyle.none:member'
+      - 'excel!Excel.ConditionalRangeFontUnderlineStyle.single:member'
+  - uid: 'excel!Excel.ConditionalRangeFontUnderlineStyle.double:member'
     name: double
     fullName: double
     langs:
       - typeScript
     type: field
     numericValue: '"Double"'
-  - uid: excel.Excel.ConditionalRangeFontUnderlineStyle.none
+  - uid: 'excel!Excel.ConditionalRangeFontUnderlineStyle.none:member'
     name: none
     fullName: none
     langs:
       - typeScript
     type: field
     numericValue: '"None"'
-  - uid: excel.Excel.ConditionalRangeFontUnderlineStyle.single
+  - uid: 'excel!Excel.ConditionalRangeFontUnderlineStyle.single:member'
     name: single
     fullName: single
     langs:
