--- a/docs/docs-ref-autogen/excel_1_9/excel/excel.interfaces.cellvalueconditionalformatloadoptions.yml
+++ b/docs/docs-ref-autogen/excel_1_9/excel/excel.interfaces.cellvalueconditionalformatloadoptions.yml
@@ -1,21 +1,21 @@
 ### YamlMime:UniversalReference
 items:
-  - uid: excel.Excel.Interfaces.CellValueConditionalFormatLoadOptions
+  - uid: 'excel!Excel.Interfaces.CellValueConditionalFormatLoadOptions:interface'
     summary: |-
-      <span data-ttu-id="17737-101">表示单元格值条件格式。</span><span class="sxs-lookup"><span data-stu-id="17737-101">Represents a cell value conditional format.</span></span>
+      <span data-ttu-id="d16b2-101">表示单元格值条件格式。</span><span class="sxs-lookup"><span data-stu-id="d16b2-101">Represents a cell value conditional format.</span></span>
 
-      <span data-ttu-id="17737-102">\[[API 集: ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="17737-102">\[ [API set: ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="d16b2-102">\[[API 集： ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="d16b2-102">\[ [API set: ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: Excel.Interfaces.CellValueConditionalFormatLoadOptions
     fullName: Excel.Interfaces.CellValueConditionalFormatLoadOptions
     langs:
       - typeScript
     type: interface
-    package: excel
+    package: excel!
     children:
-      - excel.Excel.Interfaces.CellValueConditionalFormatLoadOptions.$all
-      - excel.Excel.Interfaces.CellValueConditionalFormatLoadOptions.format
-      - excel.Excel.Interfaces.CellValueConditionalFormatLoadOptions.rule
-  - uid: excel.Excel.Interfaces.CellValueConditionalFormatLoadOptions.$all
+      - 'excel!Excel.Interfaces.CellValueConditionalFormatLoadOptions#$all:member'
+      - 'excel!Excel.Interfaces.CellValueConditionalFormatLoadOptions#format:member'
+      - 'excel!Excel.Interfaces.CellValueConditionalFormatLoadOptions#rule:member'
+  - uid: 'excel!Excel.Interfaces.CellValueConditionalFormatLoadOptions#$all:member'
     name: $all
     fullName: $all
     langs:
@@ -26,11 +26,11 @@ items:
       return:
         type:
           - boolean
-  - uid: excel.Excel.Interfaces.CellValueConditionalFormatLoadOptions.format
+  - uid: 'excel!Excel.Interfaces.CellValueConditionalFormatLoadOptions#format:member'
     summary: |-
-      <span data-ttu-id="17737-103">返回一个 format 对象, 该对象封装条件格式字体、填充、边框和其他属性。</span><span class="sxs-lookup"><span data-stu-id="17737-103">Returns a format object, encapsulating the conditional formats font, fill, borders, and other properties.</span></span>
+      <span data-ttu-id="d16b2-103">返回一个 format 对象，该对象封装条件格式字体、填充、边框和其他属性。</span><span class="sxs-lookup"><span data-stu-id="d16b2-103">Returns a format object, encapsulating the conditional formats font, fill, borders, and other properties.</span></span>
 
-      <span data-ttu-id="17737-104">\[[API 集: ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="17737-104">\[ [API set: ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="d16b2-104">\[[API 集： ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="d16b2-104">\[ [API set: ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: format
     fullName: format
     langs:
@@ -40,12 +40,12 @@ items:
       content: 'format?: Excel.Interfaces.ConditionalRangeFormatLoadOptions;'
       return:
         type:
-          - excel.Excel.Interfaces.ConditionalRangeFormatLoadOptions
-  - uid: excel.Excel.Interfaces.CellValueConditionalFormatLoadOptions.rule
+          - 'excel!Excel.Interfaces.ConditionalRangeFormatLoadOptions:interface'
+  - uid: 'excel!Excel.Interfaces.CellValueConditionalFormatLoadOptions#rule:member'
     summary: |-
-      <span data-ttu-id="17737-105">表示此条件格式中的 Rule 对象。</span><span class="sxs-lookup"><span data-stu-id="17737-105">Represents the Rule object on this conditional format.</span></span>
+      <span data-ttu-id="d16b2-105">表示此条件格式中的 Rule 对象。</span><span class="sxs-lookup"><span data-stu-id="d16b2-105">Represents the Rule object on this conditional format.</span></span>
 
-      <span data-ttu-id="17737-106">\[[API 集: ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="17737-106">\[ [API set: ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="d16b2-106">\[[API 集： ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="d16b2-106">\[ [API set: ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: rule
     fullName: rule
     langs:
@@ -56,3 +56,6 @@ items:
       return:
         type:
           - boolean
+references:
+  - uid: 'excel!Excel.Interfaces.ConditionalRangeFormatLoadOptions:interface'
+    name: Excel.Interfaces.ConditionalRangeFormatLoadOptions
