--- a/docs/docs-ref-autogen/excel_1_9/excel/excel.interfaces.chartlegendupdatedata.yml
+++ b/docs/docs-ref-autogen/excel_1_9/excel/excel.interfaces.chartlegendupdatedata.yml
@@ -1,28 +1,28 @@
 ### YamlMime:UniversalReference
 items:
-  - uid: excel.Excel.Interfaces.ChartLegendUpdateData
-    summary: '<span data-ttu-id="433b5-101">一个用于更新 ChartLegend 对象上的数据的接口, 可用于 "chartLegend (</span><span class="sxs-lookup"><span data-stu-id="433b5-101">An interface for updating data on the ChartLegend object, for use in "chartLegend.set(</span></span><!-- --><span data-ttu-id="433b5-102">{ ... }</span><span class="sxs-lookup"><span data-stu-id="433b5-102"></span></span><!-- --><span data-ttu-id="433b5-103">)".</span><span class="sxs-lookup"><span data-stu-id="433b5-103"></span></span>'
+  - uid: 'excel!Excel.Interfaces.ChartLegendUpdateData:interface'
+    summary: '<span data-ttu-id="1611a-101">一个用于更新 ChartLegend 对象上的数据的接口，可用于 "chartLegend （</span><span class="sxs-lookup"><span data-stu-id="1611a-101">An interface for updating data on the ChartLegend object, for use in "chartLegend.set(</span></span><!-- --><span data-ttu-id="1611a-102">{ ... }</span><span class="sxs-lookup"><span data-stu-id="1611a-102"></span></span><!-- --><span data-ttu-id="1611a-103">)".</span><span class="sxs-lookup"><span data-stu-id="1611a-103"></span></span>'
     name: Excel.Interfaces.ChartLegendUpdateData
     fullName: Excel.Interfaces.ChartLegendUpdateData
     langs:
       - typeScript
     type: interface
-    package: excel
+    package: excel!
     children:
-      - excel.Excel.Interfaces.ChartLegendUpdateData.format
-      - excel.Excel.Interfaces.ChartLegendUpdateData.height
-      - excel.Excel.Interfaces.ChartLegendUpdateData.left
-      - excel.Excel.Interfaces.ChartLegendUpdateData.overlay
-      - excel.Excel.Interfaces.ChartLegendUpdateData.position
-      - excel.Excel.Interfaces.ChartLegendUpdateData.showShadow
-      - excel.Excel.Interfaces.ChartLegendUpdateData.top
-      - excel.Excel.Interfaces.ChartLegendUpdateData.visible
-      - excel.Excel.Interfaces.ChartLegendUpdateData.width
-  - uid: excel.Excel.Interfaces.ChartLegendUpdateData.format
+      - 'excel!Excel.Interfaces.ChartLegendUpdateData#format:member'
+      - 'excel!Excel.Interfaces.ChartLegendUpdateData#height:member'
+      - 'excel!Excel.Interfaces.ChartLegendUpdateData#left:member'
+      - 'excel!Excel.Interfaces.ChartLegendUpdateData#overlay:member'
+      - 'excel!Excel.Interfaces.ChartLegendUpdateData#position:member'
+      - 'excel!Excel.Interfaces.ChartLegendUpdateData#showShadow:member'
+      - 'excel!Excel.Interfaces.ChartLegendUpdateData#top:member'
+      - 'excel!Excel.Interfaces.ChartLegendUpdateData#visible:member'
+      - 'excel!Excel.Interfaces.ChartLegendUpdateData#width:member'
+  - uid: 'excel!Excel.Interfaces.ChartLegendUpdateData#format:member'
     summary: |-
-      <span data-ttu-id="433b5-104">表示图表图例的格式，包括填充和字体格式。</span><span class="sxs-lookup"><span data-stu-id="433b5-104">Represents the formatting of a chart legend, which includes fill and font formatting.</span></span>
+      <span data-ttu-id="1611a-104">表示图表图例的格式，包括填充和字体格式。</span><span class="sxs-lookup"><span data-stu-id="1611a-104">Represents the formatting of a chart legend, which includes fill and font formatting.</span></span>
 
-      <span data-ttu-id="433b5-105">\[[API 集: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="433b5-105">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="1611a-105">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="1611a-105">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: format
     fullName: format
     langs:
@@ -32,12 +32,12 @@ items:
       content: 'format?: Excel.Interfaces.ChartLegendFormatUpdateData;'
       return:
         type:
-          - excel.Excel.Interfaces.ChartLegendFormatUpdateData
-  - uid: excel.Excel.Interfaces.ChartLegendUpdateData.height
+          - 'excel!Excel.Interfaces.ChartLegendFormatUpdateData:interface'
+  - uid: 'excel!Excel.Interfaces.ChartLegendUpdateData#height:member'
     summary: |-
-      <span data-ttu-id="433b5-106">表示图表上的图例的高度 (以磅为单位)。</span><span class="sxs-lookup"><span data-stu-id="433b5-106">Represents the height, in points, of the legend on the chart.</span></span> <span data-ttu-id="433b5-107">如果图例不可见, 则为 Null。</span><span class="sxs-lookup"><span data-stu-id="433b5-107">Null if legend is not visible.</span></span>
+      <span data-ttu-id="1611a-106">表示图表上的图例的高度（以磅为单位）。</span><span class="sxs-lookup"><span data-stu-id="1611a-106">Represents the height, in points, of the legend on the chart.</span></span> <span data-ttu-id="1611a-107">如果图例不可见，则为 Null。</span><span class="sxs-lookup"><span data-stu-id="1611a-107">Null if legend is not visible.</span></span>
 
-      <span data-ttu-id="433b5-108">\[[API 集: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="433b5-108">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="1611a-108">\[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="1611a-108">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: height
     fullName: height
     langs:
@@ -48,11 +48,11 @@ items:
       return:
         type:
           - number
-  - uid: excel.Excel.Interfaces.ChartLegendUpdateData.left
+  - uid: 'excel!Excel.Interfaces.ChartLegendUpdateData#left:member'
     summary: |-
-      <span data-ttu-id="433b5-109">代表图表图例的左侧 (以磅为单位)。</span><span class="sxs-lookup"><span data-stu-id="433b5-109">Represents the left, in points, of a chart legend.</span></span> <span data-ttu-id="433b5-110">如果图例不可见, 则为 Null。</span><span class="sxs-lookup"><span data-stu-id="433b5-110">Null if legend is not visible.</span></span>
+      <span data-ttu-id="1611a-109">代表图表图例的左侧（以磅为单位）。</span><span class="sxs-lookup"><span data-stu-id="1611a-109">Represents the left, in points, of a chart legend.</span></span> <span data-ttu-id="1611a-110">如果图例不可见，则为 Null。</span><span class="sxs-lookup"><span data-stu-id="1611a-110">Null if legend is not visible.</span></span>
 
-      <span data-ttu-id="433b5-111">\[[API 集: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="433b5-111">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="1611a-111">\[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="1611a-111">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: left
     fullName: left
     langs:
@@ -63,11 +63,11 @@ items:
       return:
         type:
           - number
-  - uid: excel.Excel.Interfaces.ChartLegendUpdateData.overlay
+  - uid: 'excel!Excel.Interfaces.ChartLegendUpdateData#overlay:member'
     summary: |-
-      <span data-ttu-id="433b5-112">表示图表图例是否应该与图表的主体重叠的布尔值。</span><span class="sxs-lookup"><span data-stu-id="433b5-112">Boolean value for whether the chart legend should overlap with the main body of the chart.</span></span>
+      <span data-ttu-id="1611a-112">表示图表图例是否应该与图表的主体重叠的布尔值。</span><span class="sxs-lookup"><span data-stu-id="1611a-112">Boolean value for whether the chart legend should overlap with the main body of the chart.</span></span>
 
-      <span data-ttu-id="433b5-113">\[[API 集: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="433b5-113">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="1611a-113">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="1611a-113">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: overlay
     fullName: overlay
     langs:
@@ -78,11 +78,11 @@ items:
       return:
         type:
           - boolean
-  - uid: excel.Excel.Interfaces.ChartLegendUpdateData.position
+  - uid: 'excel!Excel.Interfaces.ChartLegendUpdateData#position:member'
     summary: |-
-      <span data-ttu-id="433b5-114">表示图例在图表上的位置。</span><span class="sxs-lookup"><span data-stu-id="433b5-114">Represents the position of the legend on the chart.</span></span> <span data-ttu-id="433b5-115">有关详细信息, 请参阅 ChartLegendPosition。</span><span class="sxs-lookup"><span data-stu-id="433b5-115">See Excel.ChartLegendPosition for details.</span></span>
+      <span data-ttu-id="1611a-114">表示图例在图表上的位置。</span><span class="sxs-lookup"><span data-stu-id="1611a-114">Represents the position of the legend on the chart.</span></span> <span data-ttu-id="1611a-115">有关详细信息，请参阅 ChartLegendPosition。</span><span class="sxs-lookup"><span data-stu-id="1611a-115">See Excel.ChartLegendPosition for details.</span></span>
 
-      <span data-ttu-id="433b5-116">\[[API 集: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="433b5-116">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="1611a-116">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="1611a-116">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: position
     fullName: position
     langs:
@@ -92,12 +92,12 @@ items:
       content: 'position?: Excel.ChartLegendPosition | "Invalid" | "Top" | "Bottom" | "Left" | "Right" | "Corner" | "Custom";'
       return:
         type:
-          - Excel.ChartLegendPosition | "Invalid" | "Top" | "Bottom" | "Left" | "Right" | "Corner" | "Custom"
-  - uid: excel.Excel.Interfaces.ChartLegendUpdateData.showShadow
+          - 'excel!Excel.Interfaces.ChartLegendUpdateData#position~0:complex'
+  - uid: 'excel!Excel.Interfaces.ChartLegendUpdateData#showShadow:member'
     summary: |-
-      <span data-ttu-id="433b5-117">表示图例在图表上是否有阴影。</span><span class="sxs-lookup"><span data-stu-id="433b5-117">Represents if the legend has a shadow on the chart.</span></span>
+      <span data-ttu-id="1611a-117">表示图例在图表上是否有阴影。</span><span class="sxs-lookup"><span data-stu-id="1611a-117">Represents if the legend has a shadow on the chart.</span></span>
 
-      <span data-ttu-id="433b5-118">\[[API 集: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="433b5-118">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="1611a-118">\[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="1611a-118">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: showShadow
     fullName: showShadow
     langs:
@@ -108,11 +108,11 @@ items:
       return:
         type:
           - boolean
-  - uid: excel.Excel.Interfaces.ChartLegendUpdateData.top
+  - uid: 'excel!Excel.Interfaces.ChartLegendUpdateData#top:member'
     summary: |-
-      <span data-ttu-id="433b5-119">表示图表图例顶部。</span><span class="sxs-lookup"><span data-stu-id="433b5-119">Represents the top of a chart legend.</span></span>
+      <span data-ttu-id="1611a-119">表示图表图例顶部。</span><span class="sxs-lookup"><span data-stu-id="1611a-119">Represents the top of a chart legend.</span></span>
 
-      <span data-ttu-id="433b5-120">\[[API 集: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="433b5-120">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="1611a-120">\[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="1611a-120">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: top
     fullName: top
     langs:
@@ -123,11 +123,11 @@ items:
       return:
         type:
           - number
-  - uid: excel.Excel.Interfaces.ChartLegendUpdateData.visible
+  - uid: 'excel!Excel.Interfaces.ChartLegendUpdateData#visible:member'
     summary: |-
-      <span data-ttu-id="433b5-121">表示 ChartLegend 对象是否可见的布尔值。</span><span class="sxs-lookup"><span data-stu-id="433b5-121">A boolean value the represents the visibility of a ChartLegend object.</span></span>
+      <span data-ttu-id="1611a-121">表示 ChartLegend 对象是否可见的布尔值。</span><span class="sxs-lookup"><span data-stu-id="1611a-121">A boolean value the represents the visibility of a ChartLegend object.</span></span>
 
-      <span data-ttu-id="433b5-122">\[[API 集: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="433b5-122">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="1611a-122">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="1611a-122">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: visible
     fullName: visible
     langs:
@@ -138,11 +138,11 @@ items:
       return:
         type:
           - boolean
-  - uid: excel.Excel.Interfaces.ChartLegendUpdateData.width
+  - uid: 'excel!Excel.Interfaces.ChartLegendUpdateData#width:member'
     summary: |-
-      <span data-ttu-id="433b5-123">表示图表上的图例的宽度 (以磅为单位)。</span><span class="sxs-lookup"><span data-stu-id="433b5-123">Represents the width, in points, of the legend on the chart.</span></span> <span data-ttu-id="433b5-124">如果图例不可见, 则为 Null。</span><span class="sxs-lookup"><span data-stu-id="433b5-124">Null if legend is not visible.</span></span>
+      <span data-ttu-id="1611a-123">表示图表上的图例的宽度（以磅为单位）。</span><span class="sxs-lookup"><span data-stu-id="1611a-123">Represents the width, in points, of the legend on the chart.</span></span> <span data-ttu-id="1611a-124">如果图例不可见，则为 Null。</span><span class="sxs-lookup"><span data-stu-id="1611a-124">Null if legend is not visible.</span></span>
 
-      <span data-ttu-id="433b5-125">\[[API 集: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="433b5-125">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="1611a-125">\[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="1611a-125">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: width
     fullName: width
     langs:
@@ -153,3 +153,15 @@ items:
       return:
         type:
           - number
+references:
+  - uid: 'excel!Excel.Interfaces.ChartLegendFormatUpdateData:interface'
+    name: Excel.Interfaces.ChartLegendFormatUpdateData
+  - uid: 'excel!Excel.Interfaces.ChartLegendUpdateData#position~0:complex'
+    name: Excel.ChartLegendPosition | "Invalid" | "Top" | "Bottom" | "Left" | "Right" | "Corner" | "Custom"
+    fullName: Excel.ChartLegendPosition | "Invalid" | "Top" | "Bottom" | "Left" | "Right" | "Corner" | "Custom"
+    spec.typeScript:
+      - uid: 'excel!Excel.ChartLegendPosition:enum'
+        name: Excel.ChartLegendPosition
+        fullName: Excel.ChartLegendPosition
+      - name: ' | "Invalid" | "Top" | "Bottom" | "Left" | "Right" | "Corner" | "Custom"'
+        fullName: ' | "Invalid" | "Top" | "Bottom" | "Left" | "Right" | "Corner" | "Custom"'
