--- a/docs/docs-ref-autogen/excel_1_9/excel/excel.interfaces.chartplotareaformatloadoptions.yml
+++ b/docs/docs-ref-autogen/excel_1_9/excel/excel.interfaces.chartplotareaformatloadoptions.yml
@@ -1,20 +1,20 @@
 ### YamlMime:UniversalReference
 items:
-  - uid: excel.Excel.Interfaces.ChartPlotAreaFormatLoadOptions
+  - uid: 'excel!Excel.Interfaces.ChartPlotAreaFormatLoadOptions:interface'
     summary: |-
-      <span data-ttu-id="107ae-101">表示图表 plotArea 的格式属性。</span><span class="sxs-lookup"><span data-stu-id="107ae-101">Represents the format properties for chart plotArea.</span></span>
+      <span data-ttu-id="e2c82-101">表示图表 plotArea 的格式属性。</span><span class="sxs-lookup"><span data-stu-id="e2c82-101">Represents the format properties for chart plotArea.</span></span>
 
-      <span data-ttu-id="107ae-102">\[[API 集: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="107ae-102">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="e2c82-102">\[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="e2c82-102">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: Excel.Interfaces.ChartPlotAreaFormatLoadOptions
     fullName: Excel.Interfaces.ChartPlotAreaFormatLoadOptions
     langs:
       - typeScript
     type: interface
-    package: excel
+    package: excel!
     children:
-      - excel.Excel.Interfaces.ChartPlotAreaFormatLoadOptions.$all
-      - excel.Excel.Interfaces.ChartPlotAreaFormatLoadOptions.border
-  - uid: excel.Excel.Interfaces.ChartPlotAreaFormatLoadOptions.$all
+      - 'excel!Excel.Interfaces.ChartPlotAreaFormatLoadOptions#$all:member'
+      - 'excel!Excel.Interfaces.ChartPlotAreaFormatLoadOptions#border:member'
+  - uid: 'excel!Excel.Interfaces.ChartPlotAreaFormatLoadOptions#$all:member'
     name: $all
     fullName: $all
     langs:
@@ -25,11 +25,11 @@ items:
       return:
         type:
           - boolean
-  - uid: excel.Excel.Interfaces.ChartPlotAreaFormatLoadOptions.border
+  - uid: 'excel!Excel.Interfaces.ChartPlotAreaFormatLoadOptions#border:member'
     summary: |-
-      <span data-ttu-id="107ae-103">表示图表 plotArea 的边框属性。</span><span class="sxs-lookup"><span data-stu-id="107ae-103">Represents the border attributes of a chart plotArea.</span></span>
+      <span data-ttu-id="e2c82-103">表示图表 plotArea 的边框属性。</span><span class="sxs-lookup"><span data-stu-id="e2c82-103">Represents the border attributes of a chart plotArea.</span></span>
 
-      <span data-ttu-id="107ae-104">\[[API 集: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="107ae-104">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="e2c82-104">\[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="e2c82-104">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: border
     fullName: border
     langs:
@@ -39,4 +39,7 @@ items:
       content: 'border?: Excel.Interfaces.ChartBorderLoadOptions;'
       return:
         type:
-          - excel.Excel.Interfaces.ChartBorderLoadOptions
+          - 'excel!Excel.Interfaces.ChartBorderLoadOptions:interface'
+references:
+  - uid: 'excel!Excel.Interfaces.ChartBorderLoadOptions:interface'
+    name: Excel.Interfaces.ChartBorderLoadOptions
