--- a/docs/docs-ref-autogen/excel_1_9/excel/excel.interfaces.chartpointdata.yml
+++ b/docs/docs-ref-autogen/excel_1_9/excel/excel.interfaces.chartpointdata.yml
@@ -1,27 +1,27 @@
 ### YamlMime:UniversalReference
 items:
-  - uid: excel.Excel.Interfaces.ChartPointData
-    summary: <span data-ttu-id="29bf2-101">描述通过调用 "chartPoint ()" 返回的数据的接口。</span><span class="sxs-lookup"><span data-stu-id="29bf2-101">An interface describing the data returned by calling "chartPoint.toJSON()".</span></span>
+  - uid: 'excel!Excel.Interfaces.ChartPointData:interface'
+    summary: <span data-ttu-id="93893-101">描述通过调用 "chartPoint （）" 返回的数据的接口。</span><span class="sxs-lookup"><span data-stu-id="93893-101">An interface describing the data returned by calling "chartPoint.toJSON()".</span></span>
     name: Excel.Interfaces.ChartPointData
     fullName: Excel.Interfaces.ChartPointData
     langs:
       - typeScript
     type: interface
-    package: excel
+    package: excel!
     children:
-      - excel.Excel.Interfaces.ChartPointData.dataLabel
-      - excel.Excel.Interfaces.ChartPointData.format
-      - excel.Excel.Interfaces.ChartPointData.hasDataLabel
-      - excel.Excel.Interfaces.ChartPointData.markerBackgroundColor
-      - excel.Excel.Interfaces.ChartPointData.markerForegroundColor
-      - excel.Excel.Interfaces.ChartPointData.markerSize
-      - excel.Excel.Interfaces.ChartPointData.markerStyle
-      - excel.Excel.Interfaces.ChartPointData.value
-  - uid: excel.Excel.Interfaces.ChartPointData.dataLabel
+      - 'excel!Excel.Interfaces.ChartPointData#dataLabel:member'
+      - 'excel!Excel.Interfaces.ChartPointData#format:member'
+      - 'excel!Excel.Interfaces.ChartPointData#hasDataLabel:member'
+      - 'excel!Excel.Interfaces.ChartPointData#markerBackgroundColor:member'
+      - 'excel!Excel.Interfaces.ChartPointData#markerForegroundColor:member'
+      - 'excel!Excel.Interfaces.ChartPointData#markerSize:member'
+      - 'excel!Excel.Interfaces.ChartPointData#markerStyle:member'
+      - 'excel!Excel.Interfaces.ChartPointData#value:member'
+  - uid: 'excel!Excel.Interfaces.ChartPointData#dataLabel:member'
     summary: |-
-      <span data-ttu-id="29bf2-102">返回图表点的数据标签。</span><span class="sxs-lookup"><span data-stu-id="29bf2-102">Returns the data label of a chart point.</span></span> <span data-ttu-id="29bf2-103">只读。</span><span class="sxs-lookup"><span data-stu-id="29bf2-103">Read-only.</span></span>
+      <span data-ttu-id="93893-102">返回图表点的数据标签。</span><span class="sxs-lookup"><span data-stu-id="93893-102">Returns the data label of a chart point.</span></span> <span data-ttu-id="93893-103">只读。</span><span class="sxs-lookup"><span data-stu-id="93893-103">Read-only.</span></span>
 
-      <span data-ttu-id="29bf2-104">\[[API 集: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="29bf2-104">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="93893-104">\[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="93893-104">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: dataLabel
     fullName: dataLabel
     langs:
@@ -31,12 +31,12 @@ items:
       content: 'dataLabel?: Excel.Interfaces.ChartDataLabelData;'
       return:
         type:
-          - excel.Excel.Interfaces.ChartDataLabelData
-  - uid: excel.Excel.Interfaces.ChartPointData.format
+          - 'excel!Excel.Interfaces.ChartDataLabelData:interface'
+  - uid: 'excel!Excel.Interfaces.ChartPointData#format:member'
     summary: |-
-      <span data-ttu-id="29bf2-105">封装图表点的格式属性。</span><span class="sxs-lookup"><span data-stu-id="29bf2-105">Encapsulates the format properties chart point.</span></span> <span data-ttu-id="29bf2-106">只读。</span><span class="sxs-lookup"><span data-stu-id="29bf2-106">Read-only.</span></span>
+      <span data-ttu-id="93893-105">封装图表点的格式属性。</span><span class="sxs-lookup"><span data-stu-id="93893-105">Encapsulates the format properties chart point.</span></span> <span data-ttu-id="93893-106">只读。</span><span class="sxs-lookup"><span data-stu-id="93893-106">Read-only.</span></span>
 
-      <span data-ttu-id="29bf2-107">\[[API 集: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="29bf2-107">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="93893-107">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="93893-107">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: format
     fullName: format
     langs:
@@ -46,12 +46,12 @@ items:
       content: 'format?: Excel.Interfaces.ChartPointFormatData;'
       return:
         type:
-          - excel.Excel.Interfaces.ChartPointFormatData
-  - uid: excel.Excel.Interfaces.ChartPointData.hasDataLabel
+          - 'excel!Excel.Interfaces.ChartPointFormatData:interface'
+  - uid: 'excel!Excel.Interfaces.ChartPointData#hasDataLabel:member'
     summary: |-
-      <span data-ttu-id="29bf2-108">表示数据点是否具有数据标签。</span><span class="sxs-lookup"><span data-stu-id="29bf2-108">Represents whether a data point has a data label.</span></span> <span data-ttu-id="29bf2-109">不适用于曲面图。</span><span class="sxs-lookup"><span data-stu-id="29bf2-109">Not applicable for surface charts.</span></span>
+      <span data-ttu-id="93893-108">表示数据点是否具有数据标签。</span><span class="sxs-lookup"><span data-stu-id="93893-108">Represents whether a data point has a data label.</span></span> <span data-ttu-id="93893-109">不适用于曲面图。</span><span class="sxs-lookup"><span data-stu-id="93893-109">Not applicable for surface charts.</span></span>
 
-      <span data-ttu-id="29bf2-110">\[[API 集: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="29bf2-110">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="93893-110">\[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="93893-110">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: hasDataLabel
     fullName: hasDataLabel
     langs:
@@ -62,11 +62,11 @@ items:
       return:
         type:
           - boolean
-  - uid: excel.Excel.Interfaces.ChartPointData.markerBackgroundColor
+  - uid: 'excel!Excel.Interfaces.ChartPointData#markerBackgroundColor:member'
     summary: |-
-      <span data-ttu-id="29bf2-111">表示数据点的标记背景色的 HTML 颜色代码。</span><span class="sxs-lookup"><span data-stu-id="29bf2-111">HTML color code representation of the marker background color of data point.</span></span> <span data-ttu-id="29bf2-112">例如，</span><span class="sxs-lookup"><span data-stu-id="29bf2-112">E.g.</span></span> <span data-ttu-id="29bf2-113">\#FF0000 表示红色。</span><span class="sxs-lookup"><span data-stu-id="29bf2-113">\#FF0000 represents Red.</span></span>
+      <span data-ttu-id="93893-111">表示数据点的标记背景色的 HTML 颜色代码。</span><span class="sxs-lookup"><span data-stu-id="93893-111">HTML color code representation of the marker background color of data point.</span></span> <span data-ttu-id="93893-112">例如，</span><span class="sxs-lookup"><span data-stu-id="93893-112">E.g.</span></span> <span data-ttu-id="93893-113">\#FF0000 表示红色。</span><span class="sxs-lookup"><span data-stu-id="93893-113">\#FF0000 represents Red.</span></span>
 
-      <span data-ttu-id="29bf2-114">\[[API 集: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="29bf2-114">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="93893-114">\[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="93893-114">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: markerBackgroundColor
     fullName: markerBackgroundColor
     langs:
@@ -77,11 +77,11 @@ items:
       return:
         type:
           - string
-  - uid: excel.Excel.Interfaces.ChartPointData.markerForegroundColor
+  - uid: 'excel!Excel.Interfaces.ChartPointData#markerForegroundColor:member'
     summary: |-
-      <span data-ttu-id="29bf2-115">表示数据点的标记前景色的 HTML 颜色代码。</span><span class="sxs-lookup"><span data-stu-id="29bf2-115">HTML color code representation of the marker foreground color of data point.</span></span> <span data-ttu-id="29bf2-116">例如，</span><span class="sxs-lookup"><span data-stu-id="29bf2-116">E.g.</span></span> <span data-ttu-id="29bf2-117">\#FF0000 表示红色。</span><span class="sxs-lookup"><span data-stu-id="29bf2-117">\#FF0000 represents Red.</span></span>
+      <span data-ttu-id="93893-115">表示数据点的标记前景色的 HTML 颜色代码。</span><span class="sxs-lookup"><span data-stu-id="93893-115">HTML color code representation of the marker foreground color of data point.</span></span> <span data-ttu-id="93893-116">例如，</span><span class="sxs-lookup"><span data-stu-id="93893-116">E.g.</span></span> <span data-ttu-id="93893-117">\#FF0000 表示红色。</span><span class="sxs-lookup"><span data-stu-id="93893-117">\#FF0000 represents Red.</span></span>
 
-      <span data-ttu-id="29bf2-118">\[[API 集: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="29bf2-118">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="93893-118">\[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="93893-118">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: markerForegroundColor
     fullName: markerForegroundColor
     langs:
@@ -92,11 +92,11 @@ items:
       return:
         type:
           - string
-  - uid: excel.Excel.Interfaces.ChartPointData.markerSize
+  - uid: 'excel!Excel.Interfaces.ChartPointData#markerSize:member'
     summary: |-
-      <span data-ttu-id="29bf2-119">表示数据点的标记大小。</span><span class="sxs-lookup"><span data-stu-id="29bf2-119">Represents marker size of data point.</span></span>
+      <span data-ttu-id="93893-119">表示数据点的标记大小。</span><span class="sxs-lookup"><span data-stu-id="93893-119">Represents marker size of data point.</span></span>
 
-      <span data-ttu-id="29bf2-120">\[[API 集: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="29bf2-120">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="93893-120">\[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="93893-120">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: markerSize
     fullName: markerSize
     langs:
@@ -107,11 +107,11 @@ items:
       return:
         type:
           - number
-  - uid: excel.Excel.Interfaces.ChartPointData.markerStyle
+  - uid: 'excel!Excel.Interfaces.ChartPointData#markerStyle:member'
     summary: |-
-      <span data-ttu-id="29bf2-121">表示图表数据点的标记样式。</span><span class="sxs-lookup"><span data-stu-id="29bf2-121">Represents marker style of a chart data point.</span></span> <span data-ttu-id="29bf2-122">有关详细信息, 请参阅 ChartMarkerStyle。</span><span class="sxs-lookup"><span data-stu-id="29bf2-122">See Excel.ChartMarkerStyle for details.</span></span>
+      <span data-ttu-id="93893-121">表示图表数据点的标记样式。</span><span class="sxs-lookup"><span data-stu-id="93893-121">Represents marker style of a chart data point.</span></span> <span data-ttu-id="93893-122">有关详细信息，请参阅 ChartMarkerStyle。</span><span class="sxs-lookup"><span data-stu-id="93893-122">See Excel.ChartMarkerStyle for details.</span></span>
 
-      <span data-ttu-id="29bf2-123">\[[API 集: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="29bf2-123">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="93893-123">\[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="93893-123">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: markerStyle
     fullName: markerStyle
     langs:
@@ -121,12 +121,12 @@ items:
       content: 'markerStyle?: Excel.ChartMarkerStyle | "Invalid" | "Automatic" | "None" | "Square" | "Diamond" | "Triangle" | "X" | "Star" | "Dot" | "Dash" | "Circle" | "Plus" | "Picture";'
       return:
         type:
-          - Excel.ChartMarkerStyle | "Invalid" | "Automatic" | "None" | "Square" | "Diamond" | "Triangle" | "X" | "Star" | "Dot" | "Dash" | "Circle" | "Plus" | "Picture"
-  - uid: excel.Excel.Interfaces.ChartPointData.value
+          - 'excel!Excel.Interfaces.ChartPointData#markerStyle~0:complex'
+  - uid: 'excel!Excel.Interfaces.ChartPointData#value:member'
     summary: |-
-      <span data-ttu-id="29bf2-124">返回图表点的值。</span><span class="sxs-lookup"><span data-stu-id="29bf2-124">Returns the value of a chart point.</span></span> <span data-ttu-id="29bf2-125">只读。</span><span class="sxs-lookup"><span data-stu-id="29bf2-125">Read-only.</span></span>
+      <span data-ttu-id="93893-124">返回图表点的值。</span><span class="sxs-lookup"><span data-stu-id="93893-124">Returns the value of a chart point.</span></span> <span data-ttu-id="93893-125">只读。</span><span class="sxs-lookup"><span data-stu-id="93893-125">Read-only.</span></span>
 
-      <span data-ttu-id="29bf2-126">\[[API 集: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="29bf2-126">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="93893-126">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="93893-126">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: value
     fullName: value
     langs:
@@ -137,3 +137,17 @@ items:
       return:
         type:
           - any
+references:
+  - uid: 'excel!Excel.Interfaces.ChartDataLabelData:interface'
+    name: Excel.Interfaces.ChartDataLabelData
+  - uid: 'excel!Excel.Interfaces.ChartPointFormatData:interface'
+    name: Excel.Interfaces.ChartPointFormatData
+  - uid: 'excel!Excel.Interfaces.ChartPointData#markerStyle~0:complex'
+    name: Excel.ChartMarkerStyle | "Invalid" | "Automatic" | "None" | "Square" | "Diamond" | "Triangle" | "X" | "Star" | "Dot" | "Dash" | "Circle" | "Plus" | "Picture"
+    fullName: Excel.ChartMarkerStyle | "Invalid" | "Automatic" | "None" | "Square" | "Diamond" | "Triangle" | "X" | "Star" | "Dot" | "Dash" | "Circle" | "Plus" | "Picture"
+    spec.typeScript:
+      - uid: 'excel!Excel.ChartMarkerStyle:enum'
+        name: Excel.ChartMarkerStyle
+        fullName: Excel.ChartMarkerStyle
+      - name: ' | "Invalid" | "Automatic" | "None" | "Square" | "Diamond" | "Triangle" | "X" | "Star" | "Dot" | "Dash" | "Circle" | "Plus" | "Picture"'
+        fullName: ' | "Invalid" | "Automatic" | "None" | "Square" | "Diamond" | "Triangle" | "X" | "Star" | "Dot" | "Dash" | "Circle" | "Plus" | "Picture"'
