--- a/docs/docs-ref-autogen/excel_1_9/excel/excel.interfaces.charttrendlinelabelformatupdatedata.yml
+++ b/docs/docs-ref-autogen/excel_1_9/excel/excel.interfaces.charttrendlinelabelformatupdatedata.yml
@@ -1,21 +1,21 @@
 ### YamlMime:UniversalReference
 items:
-  - uid: excel.Excel.Interfaces.ChartTrendlineLabelFormatUpdateData
-    summary: '<span data-ttu-id="130e2-101">一个用于更新 ChartTrendlineLabelFormat 对象上的数据的接口, 可用于 "chartTrendlineLabelFormat (</span><span class="sxs-lookup"><span data-stu-id="130e2-101">An interface for updating data on the ChartTrendlineLabelFormat object, for use in "chartTrendlineLabelFormat.set(</span></span><!-- --><span data-ttu-id="130e2-102">{ ... }</span><span class="sxs-lookup"><span data-stu-id="130e2-102"></span></span><!-- --><span data-ttu-id="130e2-103">)".</span><span class="sxs-lookup"><span data-stu-id="130e2-103"></span></span>'
+  - uid: 'excel!Excel.Interfaces.ChartTrendlineLabelFormatUpdateData:interface'
+    summary: '<span data-ttu-id="004da-101">一个用于更新 ChartTrendlineLabelFormat 对象上的数据的接口，可用于 "chartTrendlineLabelFormat （</span><span class="sxs-lookup"><span data-stu-id="004da-101">An interface for updating data on the ChartTrendlineLabelFormat object, for use in "chartTrendlineLabelFormat.set(</span></span><!-- --><span data-ttu-id="004da-102">{ ... }</span><span class="sxs-lookup"><span data-stu-id="004da-102"></span></span><!-- --><span data-ttu-id="004da-103">)".</span><span class="sxs-lookup"><span data-stu-id="004da-103"></span></span>'
     name: Excel.Interfaces.ChartTrendlineLabelFormatUpdateData
     fullName: Excel.Interfaces.ChartTrendlineLabelFormatUpdateData
     langs:
       - typeScript
     type: interface
-    package: excel
+    package: excel!
     children:
-      - excel.Excel.Interfaces.ChartTrendlineLabelFormatUpdateData.border
-      - excel.Excel.Interfaces.ChartTrendlineLabelFormatUpdateData.font
-  - uid: excel.Excel.Interfaces.ChartTrendlineLabelFormatUpdateData.border
+      - 'excel!Excel.Interfaces.ChartTrendlineLabelFormatUpdateData#border:member'
+      - 'excel!Excel.Interfaces.ChartTrendlineLabelFormatUpdateData#font:member'
+  - uid: 'excel!Excel.Interfaces.ChartTrendlineLabelFormatUpdateData#border:member'
     summary: |-
-      <span data-ttu-id="130e2-104">表示边框格式，包括颜色、线条样式和粗细。</span><span class="sxs-lookup"><span data-stu-id="130e2-104">Represents the border format, which includes color, linestyle, and weight.</span></span>
+      <span data-ttu-id="004da-104">表示边框格式，包括颜色、线条样式和粗细。</span><span class="sxs-lookup"><span data-stu-id="004da-104">Represents the border format, which includes color, linestyle, and weight.</span></span>
 
-      <span data-ttu-id="130e2-105">\[[API 集: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="130e2-105">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="004da-105">\[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="004da-105">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: border
     fullName: border
     langs:
@@ -25,12 +25,12 @@ items:
       content: 'border?: Excel.Interfaces.ChartBorderUpdateData;'
       return:
         type:
-          - excel.Excel.Interfaces.ChartBorderUpdateData
-  - uid: excel.Excel.Interfaces.ChartTrendlineLabelFormatUpdateData.font
+          - 'excel!Excel.Interfaces.ChartBorderUpdateData:interface'
+  - uid: 'excel!Excel.Interfaces.ChartTrendlineLabelFormatUpdateData#font:member'
     summary: |-
-      <span data-ttu-id="130e2-106">表示图表趋势线标签的字体属性（字体名称、字体大小、颜色等）。</span><span class="sxs-lookup"><span data-stu-id="130e2-106">Represents the font attributes (font name, font size, color, etc.) for a chart trendline label.</span></span>
+      <span data-ttu-id="004da-106">表示图表趋势线标签的字体属性（字体名称、字体大小、颜色等）。</span><span class="sxs-lookup"><span data-stu-id="004da-106">Represents the font attributes (font name, font size, color, etc.) for a chart trendline label.</span></span>
 
-      <span data-ttu-id="130e2-107">\[[API 集: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="130e2-107">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="004da-107">\[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="004da-107">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: font
     fullName: font
     langs:
@@ -40,4 +40,9 @@ items:
       content: 'font?: Excel.Interfaces.ChartFontUpdateData;'
       return:
         type:
-          - excel.Excel.Interfaces.ChartFontUpdateData
+          - 'excel!Excel.Interfaces.ChartFontUpdateData:interface'
+references:
+  - uid: 'excel!Excel.Interfaces.ChartBorderUpdateData:interface'
+    name: Excel.Interfaces.ChartBorderUpdateData
+  - uid: 'excel!Excel.Interfaces.ChartFontUpdateData:interface'
+    name: Excel.Interfaces.ChartFontUpdateData
