--- a/docs/docs-ref-autogen/excel_1_9/excel/excel.interfaces.conditionalrangeborderdata.yml
+++ b/docs/docs-ref-autogen/excel_1_9/excel/excel.interfaces.conditionalrangeborderdata.yml
@@ -1,22 +1,22 @@
 ### YamlMime:UniversalReference
 items:
-  - uid: excel.Excel.Interfaces.ConditionalRangeBorderData
-    summary: <span data-ttu-id="7d481-101">描述通过调用 "conditionalRangeBorder ()" 返回的数据的接口。</span><span class="sxs-lookup"><span data-stu-id="7d481-101">An interface describing the data returned by calling "conditionalRangeBorder.toJSON()".</span></span>
+  - uid: 'excel!Excel.Interfaces.ConditionalRangeBorderData:interface'
+    summary: <span data-ttu-id="44f86-101">描述通过调用 "conditionalRangeBorder （）" 返回的数据的接口。</span><span class="sxs-lookup"><span data-stu-id="44f86-101">An interface describing the data returned by calling "conditionalRangeBorder.toJSON()".</span></span>
     name: Excel.Interfaces.ConditionalRangeBorderData
     fullName: Excel.Interfaces.ConditionalRangeBorderData
     langs:
       - typeScript
     type: interface
-    package: excel
+    package: excel!
     children:
-      - excel.Excel.Interfaces.ConditionalRangeBorderData.color
-      - excel.Excel.Interfaces.ConditionalRangeBorderData.sideIndex
-      - excel.Excel.Interfaces.ConditionalRangeBorderData.style
-  - uid: excel.Excel.Interfaces.ConditionalRangeBorderData.color
+      - 'excel!Excel.Interfaces.ConditionalRangeBorderData#color:member'
+      - 'excel!Excel.Interfaces.ConditionalRangeBorderData#sideIndex:member'
+      - 'excel!Excel.Interfaces.ConditionalRangeBorderData#style:member'
+  - uid: 'excel!Excel.Interfaces.ConditionalRangeBorderData#color:member'
     summary: |-
-      <span data-ttu-id="7d481-102">代表\#RRGGBB (例如 "FFA500") 或命名的 HTML 颜色 (例如 "橙色") 的边框线条颜色的 HTML 颜色代码。</span><span class="sxs-lookup"><span data-stu-id="7d481-102">HTML color code representing the color of the border line, of the form \#RRGGBB (e.g. "FFA500") or as a named HTML color (e.g. "orange").</span></span>
+      <span data-ttu-id="44f86-102">代表\#RRGGBB （例如 "FFA500"）或命名的 HTML 颜色（例如 "橙色"）的边框线条颜色的 HTML 颜色代码。</span><span class="sxs-lookup"><span data-stu-id="44f86-102">HTML color code representing the color of the border line, of the form \#RRGGBB (e.g. "FFA500") or as a named HTML color (e.g. "orange").</span></span>
 
-      <span data-ttu-id="7d481-103">\[[API 集: ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="7d481-103">\[ [API set: ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="44f86-103">\[[API 集： ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="44f86-103">\[ [API set: ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: color
     fullName: color
     langs:
@@ -27,11 +27,11 @@ items:
       return:
         type:
           - string
-  - uid: excel.Excel.Interfaces.ConditionalRangeBorderData.sideIndex
+  - uid: 'excel!Excel.Interfaces.ConditionalRangeBorderData#sideIndex:member'
     summary: |-
-      <span data-ttu-id="7d481-104">指示边框的特定边的常量值。</span><span class="sxs-lookup"><span data-stu-id="7d481-104">Constant value that indicates the specific side of the border.</span></span> <span data-ttu-id="7d481-105">有关详细信息, 请参阅 ConditionalRangeBorderIndex。</span><span class="sxs-lookup"><span data-stu-id="7d481-105">See Excel.ConditionalRangeBorderIndex for details.</span></span> <span data-ttu-id="7d481-106">只读。</span><span class="sxs-lookup"><span data-stu-id="7d481-106">Read-only.</span></span>
+      <span data-ttu-id="44f86-104">指示边框的特定边的常量值。</span><span class="sxs-lookup"><span data-stu-id="44f86-104">Constant value that indicates the specific side of the border.</span></span> <span data-ttu-id="44f86-105">有关详细信息，请参阅 ConditionalRangeBorderIndex。</span><span class="sxs-lookup"><span data-stu-id="44f86-105">See Excel.ConditionalRangeBorderIndex for details.</span></span> <span data-ttu-id="44f86-106">只读。</span><span class="sxs-lookup"><span data-stu-id="44f86-106">Read-only.</span></span>
 
-      <span data-ttu-id="7d481-107">\[[API 集: ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="7d481-107">\[ [API set: ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="44f86-107">\[[API 集： ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="44f86-107">\[ [API set: ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: sideIndex
     fullName: sideIndex
     langs:
@@ -41,12 +41,12 @@ items:
       content: 'sideIndex?: Excel.ConditionalRangeBorderIndex | "EdgeTop" | "EdgeBottom" | "EdgeLeft" | "EdgeRight";'
       return:
         type:
-          - Excel.ConditionalRangeBorderIndex | "EdgeTop" | "EdgeBottom" | "EdgeLeft" | "EdgeRight"
-  - uid: excel.Excel.Interfaces.ConditionalRangeBorderData.style
+          - 'excel!Excel.Interfaces.ConditionalRangeBorderData#sideIndex~0:complex'
+  - uid: 'excel!Excel.Interfaces.ConditionalRangeBorderData#style:member'
     summary: |-
-      <span data-ttu-id="7d481-108">线条样式的常量之一，指定边框的线条样式。</span><span class="sxs-lookup"><span data-stu-id="7d481-108">One of the constants of line style specifying the line style for the border.</span></span> <span data-ttu-id="7d481-109">有关详细信息, 请参阅 BorderLineStyle。</span><span class="sxs-lookup"><span data-stu-id="7d481-109">See Excel.BorderLineStyle for details.</span></span>
+      <span data-ttu-id="44f86-108">线条样式的常量之一，指定边框的线条样式。</span><span class="sxs-lookup"><span data-stu-id="44f86-108">One of the constants of line style specifying the line style for the border.</span></span> <span data-ttu-id="44f86-109">有关详细信息，请参阅 BorderLineStyle。</span><span class="sxs-lookup"><span data-stu-id="44f86-109">See Excel.BorderLineStyle for details.</span></span>
 
-      <span data-ttu-id="7d481-110">\[[API 集: ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="7d481-110">\[ [API set: ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="44f86-110">\[[API 集： ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="44f86-110">\[ [API set: ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: style
     fullName: style
     langs:
@@ -56,4 +56,23 @@ items:
       content: 'style?: Excel.ConditionalRangeBorderLineStyle | "None" | "Continuous" | "Dash" | "DashDot" | "DashDotDot" | "Dot";'
       return:
         type:
-          - Excel.ConditionalRangeBorderLineStyle | "None" | "Continuous" | "Dash" | "DashDot" | "DashDotDot" | "Dot"
+          - 'excel!Excel.Interfaces.ConditionalRangeBorderData#style~0:complex'
+references:
+  - uid: 'excel!Excel.Interfaces.ConditionalRangeBorderData#sideIndex~0:complex'
+    name: Excel.ConditionalRangeBorderIndex | "EdgeTop" | "EdgeBottom" | "EdgeLeft" | "EdgeRight"
+    fullName: Excel.ConditionalRangeBorderIndex | "EdgeTop" | "EdgeBottom" | "EdgeLeft" | "EdgeRight"
+    spec.typeScript:
+      - uid: 'excel!Excel.ConditionalRangeBorderIndex:enum'
+        name: Excel.ConditionalRangeBorderIndex
+        fullName: Excel.ConditionalRangeBorderIndex
+      - name: ' | "EdgeTop" | "EdgeBottom" | "EdgeLeft" | "EdgeRight"'
+        fullName: ' | "EdgeTop" | "EdgeBottom" | "EdgeLeft" | "EdgeRight"'
+  - uid: 'excel!Excel.Interfaces.ConditionalRangeBorderData#style~0:complex'
+    name: Excel.ConditionalRangeBorderLineStyle | "None" | "Continuous" | "Dash" | "DashDot" | "DashDotDot" | "Dot"
+    fullName: Excel.ConditionalRangeBorderLineStyle | "None" | "Continuous" | "Dash" | "DashDot" | "DashDotDot" | "Dot"
+    spec.typeScript:
+      - uid: 'excel!Excel.ConditionalRangeBorderLineStyle:enum'
+        name: Excel.ConditionalRangeBorderLineStyle
+        fullName: Excel.ConditionalRangeBorderLineStyle
+      - name: ' | "None" | "Continuous" | "Dash" | "DashDot" | "DashDotDot" | "Dot"'
+        fullName: ' | "None" | "Continuous" | "Dash" | "DashDot" | "DashDotDot" | "Dot"'
