--- a/docs/docs-ref-autogen/excel_1_9/excel/excel.interfaces.pivotitemupdatedata.yml
+++ b/docs/docs-ref-autogen/excel_1_9/excel/excel.interfaces.pivotitemupdatedata.yml
@@ -1,22 +1,22 @@
 ### YamlMime:UniversalReference
 items:
-  - uid: excel.Excel.Interfaces.PivotItemUpdateData
-    summary: '<span data-ttu-id="ede50-101">一个用于更新 PivotItem 对象上的数据的接口, 可用于 "pivotItem (</span><span class="sxs-lookup"><span data-stu-id="ede50-101">An interface for updating data on the PivotItem object, for use in "pivotItem.set(</span></span><!-- --><span data-ttu-id="ede50-102">{ ... }</span><span class="sxs-lookup"><span data-stu-id="ede50-102"></span></span><!-- --><span data-ttu-id="ede50-103">)".</span><span class="sxs-lookup"><span data-stu-id="ede50-103"></span></span>'
+  - uid: 'excel!Excel.Interfaces.PivotItemUpdateData:interface'
+    summary: '<span data-ttu-id="424fd-101">一个用于更新 PivotItem 对象上的数据的接口，可用于 "pivotItem （</span><span class="sxs-lookup"><span data-stu-id="424fd-101">An interface for updating data on the PivotItem object, for use in "pivotItem.set(</span></span><!-- --><span data-ttu-id="424fd-102">{ ... }</span><span class="sxs-lookup"><span data-stu-id="424fd-102"></span></span><!-- --><span data-ttu-id="424fd-103">)".</span><span class="sxs-lookup"><span data-stu-id="424fd-103"></span></span>'
     name: Excel.Interfaces.PivotItemUpdateData
     fullName: Excel.Interfaces.PivotItemUpdateData
     langs:
       - typeScript
     type: interface
-    package: excel
+    package: excel!
     children:
-      - excel.Excel.Interfaces.PivotItemUpdateData.isExpanded
-      - excel.Excel.Interfaces.PivotItemUpdateData.name
-      - excel.Excel.Interfaces.PivotItemUpdateData.visible
-  - uid: excel.Excel.Interfaces.PivotItemUpdateData.isExpanded
+      - 'excel!Excel.Interfaces.PivotItemUpdateData#isExpanded:member'
+      - 'excel!Excel.Interfaces.PivotItemUpdateData#name:member'
+      - 'excel!Excel.Interfaces.PivotItemUpdateData#visible:member'
+  - uid: 'excel!Excel.Interfaces.PivotItemUpdateData#isExpanded:member'
     summary: |-
-      <span data-ttu-id="ede50-104">确定是展开项以显示子项还是折叠项并隐藏子项。</span><span class="sxs-lookup"><span data-stu-id="ede50-104">Determines whether the item is expanded to show child items or if it's collapsed and child items are hidden.</span></span>
+      <span data-ttu-id="424fd-104">确定是展开项以显示子项还是折叠项并隐藏子项。</span><span class="sxs-lookup"><span data-stu-id="424fd-104">Determines whether the item is expanded to show child items or if it's collapsed and child items are hidden.</span></span>
 
-      <span data-ttu-id="ede50-105">\[[API 集: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="ede50-105">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="424fd-105">\[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="424fd-105">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: isExpanded
     fullName: isExpanded
     langs:
@@ -27,11 +27,11 @@ items:
       return:
         type:
           - boolean
-  - uid: excel.Excel.Interfaces.PivotItemUpdateData.name
+  - uid: 'excel!Excel.Interfaces.PivotItemUpdateData#name:member'
     summary: |-
-      <span data-ttu-id="ede50-106">PivotItem 的名称。</span><span class="sxs-lookup"><span data-stu-id="ede50-106">Name of the PivotItem.</span></span>
+      <span data-ttu-id="424fd-106">PivotItem 的名称。</span><span class="sxs-lookup"><span data-stu-id="424fd-106">Name of the PivotItem.</span></span>
 
-      <span data-ttu-id="ede50-107">\[[API 集: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="ede50-107">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="424fd-107">\[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="424fd-107">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: name
     fullName: name
     langs:
@@ -42,11 +42,11 @@ items:
       return:
         type:
           - string
-  - uid: excel.Excel.Interfaces.PivotItemUpdateData.visible
+  - uid: 'excel!Excel.Interfaces.PivotItemUpdateData#visible:member'
     summary: |-
-      <span data-ttu-id="ede50-108">确定 PivotItem 是否可见。</span><span class="sxs-lookup"><span data-stu-id="ede50-108">Determines whether the PivotItem is visible or not.</span></span>
+      <span data-ttu-id="424fd-108">确定 PivotItem 是否可见。</span><span class="sxs-lookup"><span data-stu-id="424fd-108">Determines whether the PivotItem is visible or not.</span></span>
 
-      <span data-ttu-id="ede50-109">\[[API 集: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="ede50-109">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="424fd-109">\[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="424fd-109">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: visible
     fullName: visible
     langs:
