--- a/docs/docs-ref-autogen/excel_1_9/excel/excel.interfaces.rowcolumnpivothierarchycollectionloadoptions.yml
+++ b/docs/docs-ref-autogen/excel_1_9/excel/excel.interfaces.rowcolumnpivothierarchycollectionloadoptions.yml
@@ -1,22 +1,22 @@
 ### YamlMime:UniversalReference
 items:
-  - uid: excel.Excel.Interfaces.RowColumnPivotHierarchyCollectionLoadOptions
+  - uid: 'excel!Excel.Interfaces.RowColumnPivotHierarchyCollectionLoadOptions:interface'
     summary: |-
-      <span data-ttu-id="3e5ea-101">代表与数据透视表相关联的 RowColumnPivotHierarchy 项目的集合。</span><span class="sxs-lookup"><span data-stu-id="3e5ea-101">Represents a collection of RowColumnPivotHierarchy items associated with the PivotTable.</span></span>
+      <span data-ttu-id="49aeb-101">代表与数据透视表相关联的 RowColumnPivotHierarchy 项目的集合。</span><span class="sxs-lookup"><span data-stu-id="49aeb-101">Represents a collection of RowColumnPivotHierarchy items associated with the PivotTable.</span></span>
 
-      <span data-ttu-id="3e5ea-102">\[[API 集: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="3e5ea-102">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="49aeb-102">\[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="49aeb-102">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: Excel.Interfaces.RowColumnPivotHierarchyCollectionLoadOptions
     fullName: Excel.Interfaces.RowColumnPivotHierarchyCollectionLoadOptions
     langs:
       - typeScript
     type: interface
-    package: excel
+    package: excel!
     children:
-      - excel.Excel.Interfaces.RowColumnPivotHierarchyCollectionLoadOptions.$all
-      - excel.Excel.Interfaces.RowColumnPivotHierarchyCollectionLoadOptions.id
-      - excel.Excel.Interfaces.RowColumnPivotHierarchyCollectionLoadOptions.name
-      - excel.Excel.Interfaces.RowColumnPivotHierarchyCollectionLoadOptions.position
-  - uid: excel.Excel.Interfaces.RowColumnPivotHierarchyCollectionLoadOptions.$all
+      - 'excel!Excel.Interfaces.RowColumnPivotHierarchyCollectionLoadOptions#$all:member'
+      - 'excel!Excel.Interfaces.RowColumnPivotHierarchyCollectionLoadOptions#id:member'
+      - 'excel!Excel.Interfaces.RowColumnPivotHierarchyCollectionLoadOptions#name:member'
+      - 'excel!Excel.Interfaces.RowColumnPivotHierarchyCollectionLoadOptions#position:member'
+  - uid: 'excel!Excel.Interfaces.RowColumnPivotHierarchyCollectionLoadOptions#$all:member'
     name: $all
     fullName: $all
     langs:
@@ -27,11 +27,11 @@ items:
       return:
         type:
           - boolean
-  - uid: excel.Excel.Interfaces.RowColumnPivotHierarchyCollectionLoadOptions.id
+  - uid: 'excel!Excel.Interfaces.RowColumnPivotHierarchyCollectionLoadOptions#id:member'
     summary: |-
-      <span data-ttu-id="3e5ea-103">对于集合中的每一项: RowColumnPivotHierarchy 的 Id。</span><span class="sxs-lookup"><span data-stu-id="3e5ea-103">For EACH ITEM in the collection: Id of the RowColumnPivotHierarchy.</span></span>
+      <span data-ttu-id="49aeb-103">对于集合中的每一项： RowColumnPivotHierarchy 的 Id。</span><span class="sxs-lookup"><span data-stu-id="49aeb-103">For EACH ITEM in the collection: Id of the RowColumnPivotHierarchy.</span></span>
 
-      <span data-ttu-id="3e5ea-104">\[[API 集: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="3e5ea-104">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="49aeb-104">\[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="49aeb-104">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: id
     fullName: id
     langs:
@@ -42,11 +42,11 @@ items:
       return:
         type:
           - boolean
-  - uid: excel.Excel.Interfaces.RowColumnPivotHierarchyCollectionLoadOptions.name
+  - uid: 'excel!Excel.Interfaces.RowColumnPivotHierarchyCollectionLoadOptions#name:member'
     summary: |-
-      <span data-ttu-id="3e5ea-105">对于集合中的每一项: RowColumnPivotHierarchy 的名称。</span><span class="sxs-lookup"><span data-stu-id="3e5ea-105">For EACH ITEM in the collection: Name of the RowColumnPivotHierarchy.</span></span>
+      <span data-ttu-id="49aeb-105">对于集合中的每一项： RowColumnPivotHierarchy 的名称。</span><span class="sxs-lookup"><span data-stu-id="49aeb-105">For EACH ITEM in the collection: Name of the RowColumnPivotHierarchy.</span></span>
 
-      <span data-ttu-id="3e5ea-106">\[[API 集: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="3e5ea-106">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="49aeb-106">\[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="49aeb-106">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: name
     fullName: name
     langs:
@@ -57,11 +57,11 @@ items:
       return:
         type:
           - boolean
-  - uid: excel.Excel.Interfaces.RowColumnPivotHierarchyCollectionLoadOptions.position
+  - uid: 'excel!Excel.Interfaces.RowColumnPivotHierarchyCollectionLoadOptions#position:member'
     summary: |-
-      <span data-ttu-id="3e5ea-107">对于集合中的每一项: RowColumnPivotHierarchy 的位置。</span><span class="sxs-lookup"><span data-stu-id="3e5ea-107">For EACH ITEM in the collection: Position of the RowColumnPivotHierarchy.</span></span>
+      <span data-ttu-id="49aeb-107">对于集合中的每一项： RowColumnPivotHierarchy 的位置。</span><span class="sxs-lookup"><span data-stu-id="49aeb-107">For EACH ITEM in the collection: Position of the RowColumnPivotHierarchy.</span></span>
 
-      <span data-ttu-id="3e5ea-108">\[[API 集: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="3e5ea-108">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="49aeb-108">\[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="49aeb-108">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: position
     fullName: position
     langs:
