--- a/docs/docs-ref-autogen/excel_1_9/excel/excel.interfaces.textrangedata.yml
+++ b/docs/docs-ref-autogen/excel_1_9/excel/excel.interfaces.textrangedata.yml
@@ -1,21 +1,21 @@
 ### YamlMime:UniversalReference
 items:
-  - uid: excel.Excel.Interfaces.TextRangeData
-    summary: <span data-ttu-id="12155-101">描述通过调用 "toJSON ()" 返回的数据的接口。</span><span class="sxs-lookup"><span data-stu-id="12155-101">An interface describing the data returned by calling "textRange.toJSON()".</span></span>
+  - uid: 'excel!Excel.Interfaces.TextRangeData:interface'
+    summary: <span data-ttu-id="42d03-101">描述通过调用 "toJSON （）" 返回的数据的接口。</span><span class="sxs-lookup"><span data-stu-id="42d03-101">An interface describing the data returned by calling "textRange.toJSON()".</span></span>
     name: Excel.Interfaces.TextRangeData
     fullName: Excel.Interfaces.TextRangeData
     langs:
       - typeScript
     type: interface
-    package: excel
+    package: excel!
     children:
-      - excel.Excel.Interfaces.TextRangeData.font
-      - excel.Excel.Interfaces.TextRangeData.text
-  - uid: excel.Excel.Interfaces.TextRangeData.font
+      - 'excel!Excel.Interfaces.TextRangeData#font:member'
+      - 'excel!Excel.Interfaces.TextRangeData#text:member'
+  - uid: 'excel!Excel.Interfaces.TextRangeData#font:member'
     summary: |-
-      <span data-ttu-id="12155-102">返回一个 ShapeFont 对象，该对象表示文本范围的字体属性。</span><span class="sxs-lookup"><span data-stu-id="12155-102">Returns a ShapeFont object that represents the font attributes for the text range.</span></span> <span data-ttu-id="12155-103">只读。</span><span class="sxs-lookup"><span data-stu-id="12155-103">Read-only.</span></span>
+      <span data-ttu-id="42d03-102">返回一个 ShapeFont 对象，该对象表示文本范围的字体属性。</span><span class="sxs-lookup"><span data-stu-id="42d03-102">Returns a ShapeFont object that represents the font attributes for the text range.</span></span> <span data-ttu-id="42d03-103">只读。</span><span class="sxs-lookup"><span data-stu-id="42d03-103">Read-only.</span></span>
 
-      <span data-ttu-id="12155-104">\[[API 集: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="12155-104">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="42d03-104">\[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="42d03-104">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: font
     fullName: font
     langs:
@@ -25,12 +25,12 @@ items:
       content: 'font?: Excel.Interfaces.ShapeFontData;'
       return:
         type:
-          - excel.Excel.Interfaces.ShapeFontData
-  - uid: excel.Excel.Interfaces.TextRangeData.text
+          - 'excel!Excel.Interfaces.ShapeFontData:interface'
+  - uid: 'excel!Excel.Interfaces.TextRangeData#text:member'
     summary: |-
-      <span data-ttu-id="12155-105">表示文本范围的纯文本内容。</span><span class="sxs-lookup"><span data-stu-id="12155-105">Represents the plain text content of the text range.</span></span>
+      <span data-ttu-id="42d03-105">表示文本范围的纯文本内容。</span><span class="sxs-lookup"><span data-stu-id="42d03-105">Represents the plain text content of the text range.</span></span>
 
-      <span data-ttu-id="12155-106">\[[API 集: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="12155-106">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="42d03-106">\[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="42d03-106">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: text
     fullName: text
     langs:
@@ -41,3 +41,6 @@ items:
       return:
         type:
           - string
+references:
+  - uid: 'excel!Excel.Interfaces.ShapeFontData:interface'
+    name: Excel.Interfaces.ShapeFontData
