--- a/docs/docs-ref-autogen/excel_1_9/excel/excel.settablecellproperties.yml
+++ b/docs/docs-ref-autogen/excel_1_9/excel/excel.settablecellproperties.yml
@@ -1,25 +1,25 @@
 ### YamlMime:UniversalReference
 items:
-  - uid: excel.Excel.SettableCellProperties
+  - uid: 'excel!Excel.SettableCellProperties:interface'
     summary: |-
-      <span data-ttu-id="27f47-101">表示 setCellProperties 的输入参数。</span><span class="sxs-lookup"><span data-stu-id="27f47-101">Represents the input parameter of setCellProperties.</span></span>
+      <span data-ttu-id="11aac-101">表示 setCellProperties 的输入参数。</span><span class="sxs-lookup"><span data-stu-id="11aac-101">Represents the input parameter of setCellProperties.</span></span>
 
-      <span data-ttu-id="27f47-102">\[[API 集: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="27f47-102">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="11aac-102">\[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="11aac-102">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: Excel.SettableCellProperties
     fullName: Excel.SettableCellProperties
     langs:
       - typeScript
     type: interface
-    package: excel
+    package: excel!
     children:
-      - excel.Excel.SettableCellProperties.format
-      - excel.Excel.SettableCellProperties.hyperlink
-      - excel.Excel.SettableCellProperties.style
-  - uid: excel.Excel.SettableCellProperties.format
+      - 'excel!Excel.SettableCellProperties#format:member'
+      - 'excel!Excel.SettableCellProperties#hyperlink:member'
+      - 'excel!Excel.SettableCellProperties#style:member'
+  - uid: 'excel!Excel.SettableCellProperties#format:member'
     summary: |-
-      <span data-ttu-id="27f47-103">表示`format`属性。</span><span class="sxs-lookup"><span data-stu-id="27f47-103">Represents the `format` property.</span></span>
+      <span data-ttu-id="11aac-103">表示`format`属性。</span><span class="sxs-lookup"><span data-stu-id="11aac-103">Represents the `format` property.</span></span>
 
-      <span data-ttu-id="27f47-104">\[[API 集: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="27f47-104">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="11aac-104">\[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="11aac-104">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: format
     fullName: format
     langs:
@@ -29,12 +29,12 @@ items:
       content: 'format?: Excel.CellPropertiesFormat;'
       return:
         type:
-          - excel.Excel.CellPropertiesFormat
-  - uid: excel.Excel.SettableCellProperties.hyperlink
+          - 'excel!Excel.CellPropertiesFormat:interface'
+  - uid: 'excel!Excel.SettableCellProperties#hyperlink:member'
     summary: |-
-      <span data-ttu-id="27f47-105">表示`hyperlink`属性。</span><span class="sxs-lookup"><span data-stu-id="27f47-105">Represents the `hyperlink` property.</span></span>
+      <span data-ttu-id="11aac-105">表示`hyperlink`属性。</span><span class="sxs-lookup"><span data-stu-id="11aac-105">Represents the `hyperlink` property.</span></span>
 
-      <span data-ttu-id="27f47-106">\[[API 集: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="27f47-106">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="11aac-106">\[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="11aac-106">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: hyperlink
     fullName: hyperlink
     langs:
@@ -44,12 +44,12 @@ items:
       content: 'hyperlink?: Excel.RangeHyperlink;'
       return:
         type:
-          - excel.Excel.RangeHyperlink
-  - uid: excel.Excel.SettableCellProperties.style
+          - 'excel!Excel.RangeHyperlink:interface'
+  - uid: 'excel!Excel.SettableCellProperties#style:member'
     summary: |-
-      <span data-ttu-id="27f47-107">表示`style`属性。</span><span class="sxs-lookup"><span data-stu-id="27f47-107">Represents the `style` property.</span></span>
+      <span data-ttu-id="11aac-107">表示`style`属性。</span><span class="sxs-lookup"><span data-stu-id="11aac-107">Represents the `style` property.</span></span>
 
-      <span data-ttu-id="27f47-108">\[[API 集: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="27f47-108">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="11aac-108">\[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="11aac-108">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: style
     fullName: style
     langs:
@@ -63,7 +63,7 @@ items:
         description: |-
 
 
-          #### <a name="examples"></a><span data-ttu-id="27f47-109">示例</span><span class="sxs-lookup"><span data-stu-id="27f47-109">Examples</span></span>
+          #### <a name="examples"></a><span data-ttu-id="11aac-109">示例</span><span class="sxs-lookup"><span data-stu-id="11aac-109">Examples</span></span>
 
           ```typescript
           await Excel.run(async (context) => {
@@ -137,3 +137,8 @@ items:
               await context.sync();
           });
           ```
+references:
+  - uid: 'excel!Excel.CellPropertiesFormat:interface'
+    name: Excel.CellPropertiesFormat
+  - uid: 'excel!Excel.RangeHyperlink:interface'
+    name: Excel.RangeHyperlink
