--- a/docs/docs-ref-autogen/excel_1_9/excel/excel.shapelinestyle.yml
+++ b/docs/docs-ref-autogen/excel_1_9/excel/excel.shapelinestyle.yml
@@ -1,56 +1,56 @@
 ### YamlMime:UniversalReference
 items:
-  - uid: excel.Excel.ShapeLineStyle
+  - uid: 'excel!Excel.ShapeLineStyle:enum'
     summary: |-
-      <span data-ttu-id="cd7ad-101">线条的样式。</span><span class="sxs-lookup"><span data-stu-id="cd7ad-101">The style for a line.</span></span>
+      <span data-ttu-id="55df8-101">线条的样式。</span><span class="sxs-lookup"><span data-stu-id="55df8-101">The style for a line.</span></span>
 
-      <span data-ttu-id="cd7ad-102">\[[API 集: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="cd7ad-102">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="55df8-102">\[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="55df8-102">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: Excel.ShapeLineStyle
     fullName: Excel.ShapeLineStyle
     langs:
       - typeScript
     type: enum
-    package: excel
+    package: excel!
     children:
-      - excel.Excel.ShapeLineStyle.single
-      - excel.Excel.ShapeLineStyle.thickBetweenThin
-      - excel.Excel.ShapeLineStyle.thickThin
-      - excel.Excel.ShapeLineStyle.thinThick
-      - excel.Excel.ShapeLineStyle.thinThin
-  - uid: excel.Excel.ShapeLineStyle.single
-    summary: <span data-ttu-id="cd7ad-103">单线。</span><span class="sxs-lookup"><span data-stu-id="cd7ad-103">Single line.</span></span>
+      - 'excel!Excel.ShapeLineStyle.single:member'
+      - 'excel!Excel.ShapeLineStyle.thickBetweenThin:member'
+      - 'excel!Excel.ShapeLineStyle.thickThin:member'
+      - 'excel!Excel.ShapeLineStyle.thinThick:member'
+      - 'excel!Excel.ShapeLineStyle.thinThin:member'
+  - uid: 'excel!Excel.ShapeLineStyle.single:member'
+    summary: <span data-ttu-id="55df8-103">单线。</span><span class="sxs-lookup"><span data-stu-id="55df8-103">Single line.</span></span>
     name: single
     fullName: single
     langs:
       - typeScript
     type: field
     numericValue: '"Single"'
-  - uid: excel.Excel.ShapeLineStyle.thickBetweenThin
-    summary: <span data-ttu-id="cd7ad-104">粗线每一侧各带一条细线。</span><span class="sxs-lookup"><span data-stu-id="cd7ad-104">Thick line with a thin line on each side.</span></span>
+  - uid: 'excel!Excel.ShapeLineStyle.thickBetweenThin:member'
+    summary: <span data-ttu-id="55df8-104">粗线每一侧各带一条细线。</span><span class="sxs-lookup"><span data-stu-id="55df8-104">Thick line with a thin line on each side.</span></span>
     name: thickBetweenThin
     fullName: thickBetweenThin
     langs:
       - typeScript
     type: field
     numericValue: '"ThickBetweenThin"'
-  - uid: excel.Excel.ShapeLineStyle.thickThin
-    summary: '<span data-ttu-id="cd7ad-105">粗线位于细线旁边。</span><span class="sxs-lookup"><span data-stu-id="cd7ad-105">Thick line next to thin line.</span></span> <span data-ttu-id="cd7ad-106">对于水平线, 粗线位于细线上方。</span><span class="sxs-lookup"><span data-stu-id="cd7ad-106">For horizontal lines, the thick line is above the thin line.</span></span> <span data-ttu-id="cd7ad-107">对于垂直线, 粗线位于细线的左侧。</span><span class="sxs-lookup"><span data-stu-id="cd7ad-107">For vertical lines, the thick line is to the left of the thin line.</span></span>'
+  - uid: 'excel!Excel.ShapeLineStyle.thickThin:member'
+    summary: '<span data-ttu-id="55df8-105">粗线位于细线旁边。</span><span class="sxs-lookup"><span data-stu-id="55df8-105">Thick line next to thin line.</span></span> <span data-ttu-id="55df8-106">对于水平线，粗线位于细线上方。</span><span class="sxs-lookup"><span data-stu-id="55df8-106">For horizontal lines, the thick line is above the thin line.</span></span> <span data-ttu-id="55df8-107">对于垂直线，粗线位于细线的左侧。</span><span class="sxs-lookup"><span data-stu-id="55df8-107">For vertical lines, the thick line is to the left of the thin line.</span></span>'
     name: thickThin
     fullName: thickThin
     langs:
       - typeScript
     type: field
     numericValue: '"ThickThin"'
-  - uid: excel.Excel.ShapeLineStyle.thinThick
-    summary: '<span data-ttu-id="cd7ad-108">粗线位于细线旁边。</span><span class="sxs-lookup"><span data-stu-id="cd7ad-108">Thick line next to thin line.</span></span> <span data-ttu-id="cd7ad-109">对于水平线, 粗线位于细线下方。</span><span class="sxs-lookup"><span data-stu-id="cd7ad-109">For horizontal lines, the thick line is below the thin line.</span></span> <span data-ttu-id="cd7ad-110">对于垂直线条, 粗线位于细线的右侧。</span><span class="sxs-lookup"><span data-stu-id="cd7ad-110">For vertical lines, the thick line is to the right of the thin line.</span></span>'
+  - uid: 'excel!Excel.ShapeLineStyle.thinThick:member'
+    summary: '<span data-ttu-id="55df8-108">粗线位于细线旁边。</span><span class="sxs-lookup"><span data-stu-id="55df8-108">Thick line next to thin line.</span></span> <span data-ttu-id="55df8-109">对于水平线，粗线位于细线下方。</span><span class="sxs-lookup"><span data-stu-id="55df8-109">For horizontal lines, the thick line is below the thin line.</span></span> <span data-ttu-id="55df8-110">对于垂直线条，粗线位于细线的右侧。</span><span class="sxs-lookup"><span data-stu-id="55df8-110">For vertical lines, the thick line is to the right of the thin line.</span></span>'
     name: thinThick
     fullName: thinThick
     langs:
       - typeScript
     type: field
     numericValue: '"ThinThick"'
-  - uid: excel.Excel.ShapeLineStyle.thinThin
-    summary: <span data-ttu-id="cd7ad-111">双细线。</span><span class="sxs-lookup"><span data-stu-id="cd7ad-111">Two thin lines.</span></span>
+  - uid: 'excel!Excel.ShapeLineStyle.thinThin:member'
+    summary: <span data-ttu-id="55df8-111">双细线。</span><span class="sxs-lookup"><span data-stu-id="55df8-111">Two thin lines.</span></span>
     name: thinThin
     fullName: thinThin
     langs:
