--- a/docs/docs-ref-autogen/onenote/onenote/onenote.insertlocation.yml
+++ b/docs/docs-ref-autogen/onenote/onenote/onenote.insertlocation.yml
@@ -1,24 +1,24 @@
 ### YamlMime:UniversalReference
 items:
-  - uid: onenote.OneNote.InsertLocation
-    summary: '<span data-ttu-id="4e014-101">\[[API 集: OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="4e014-101">\[ [API set: OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets) \]</span></span>'
+  - uid: 'onenote!OneNote.InsertLocation:enum'
+    summary: '<span data-ttu-id="36ac1-101">\[[API 集： OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="36ac1-101">\[ [API set: OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets) \]</span></span>'
     name: OneNote.InsertLocation
     fullName: OneNote.InsertLocation
     langs:
       - typeScript
     type: enum
-    package: onenote
+    package: onenote!
     children:
-      - onenote.OneNote.InsertLocation.after
-      - onenote.OneNote.InsertLocation.before
-  - uid: onenote.OneNote.InsertLocation.after
+      - 'onenote!OneNote.InsertLocation.after:member'
+      - 'onenote!OneNote.InsertLocation.before:member'
+  - uid: 'onenote!OneNote.InsertLocation.after:member'
     name: after
     fullName: after
     langs:
       - typeScript
     type: field
     numericValue: '"After"'
-  - uid: onenote.OneNote.InsertLocation.before
+  - uid: 'onenote!OneNote.InsertLocation.before:member'
     name: before
     fullName: before
     langs:
