--- a/docs/docs-ref-autogen/onenote/onenote/onenote.interfaces.floatinginkdata.yml
+++ b/docs/docs-ref-autogen/onenote/onenote/onenote.interfaces.floatinginkdata.yml
@@ -1,21 +1,21 @@
 ### YamlMime:UniversalReference
 items:
-  - uid: onenote.OneNote.Interfaces.FloatingInkData
-    summary: <span data-ttu-id="f86dc-101">描述通过调用 "floatingInk ()" 返回的数据的接口。</span><span class="sxs-lookup"><span data-stu-id="f86dc-101">An interface describing the data returned by calling "floatingInk.toJSON()".</span></span>
+  - uid: 'onenote!OneNote.Interfaces.FloatingInkData:interface'
+    summary: <span data-ttu-id="83d87-101">描述通过调用 "floatingInk （）" 返回的数据的接口。</span><span class="sxs-lookup"><span data-stu-id="83d87-101">An interface describing the data returned by calling "floatingInk.toJSON()".</span></span>
     name: OneNote.Interfaces.FloatingInkData
     fullName: OneNote.Interfaces.FloatingInkData
     langs:
       - typeScript
     type: interface
-    package: onenote
+    package: onenote!
     children:
-      - onenote.OneNote.Interfaces.FloatingInkData.id
-      - onenote.OneNote.Interfaces.FloatingInkData.inkStrokes
-  - uid: onenote.OneNote.Interfaces.FloatingInkData.id
+      - 'onenote!OneNote.Interfaces.FloatingInkData#id:member'
+      - 'onenote!OneNote.Interfaces.FloatingInkData#inkStrokes:member'
+  - uid: 'onenote!OneNote.Interfaces.FloatingInkData#id:member'
     summary: |-
-      <span data-ttu-id="f86dc-102">获取 FloatingInk 对象的 ID。</span><span class="sxs-lookup"><span data-stu-id="f86dc-102">Gets the ID of the FloatingInk object.</span></span> <span data-ttu-id="f86dc-103">只读。</span><span class="sxs-lookup"><span data-stu-id="f86dc-103">Read-only.</span></span>
+      <span data-ttu-id="83d87-102">获取 FloatingInk 对象的 ID。</span><span class="sxs-lookup"><span data-stu-id="83d87-102">Gets the ID of the FloatingInk object.</span></span> <span data-ttu-id="83d87-103">只读。</span><span class="sxs-lookup"><span data-stu-id="83d87-103">Read-only.</span></span>
 
-      <span data-ttu-id="f86dc-104">\[[API 集: OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="f86dc-104">\[ [API set: OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="83d87-104">\[[API 集： OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="83d87-104">\[ [API set: OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets) \]</span></span>
     name: id
     fullName: id
     langs:
@@ -26,11 +26,11 @@ items:
       return:
         type:
           - string
-  - uid: onenote.OneNote.Interfaces.FloatingInkData.inkStrokes
+  - uid: 'onenote!OneNote.Interfaces.FloatingInkData#inkStrokes:member'
     summary: |-
-      <span data-ttu-id="f86dc-105">获取 FloatingInk 对象的笔划。</span><span class="sxs-lookup"><span data-stu-id="f86dc-105">Gets the strokes of the FloatingInk object.</span></span> <span data-ttu-id="f86dc-106">只读。</span><span class="sxs-lookup"><span data-stu-id="f86dc-106">Read-only.</span></span>
+      <span data-ttu-id="83d87-105">获取 FloatingInk 对象的笔划。</span><span class="sxs-lookup"><span data-stu-id="83d87-105">Gets the strokes of the FloatingInk object.</span></span> <span data-ttu-id="83d87-106">只读。</span><span class="sxs-lookup"><span data-stu-id="83d87-106">Read-only.</span></span>
 
-      <span data-ttu-id="f86dc-107">\[[API 集: OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="f86dc-107">\[ [API set: OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="83d87-107">\[[API 集： OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="83d87-107">\[ [API set: OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets) \]</span></span>
     name: inkStrokes
     fullName: inkStrokes
     langs:
@@ -40,4 +40,14 @@ items:
       content: 'inkStrokes?: OneNote.Interfaces.InkStrokeData[];'
       return:
         type:
-          - 'OneNote.Interfaces.InkStrokeData[]'
+          - 'onenote!OneNote.Interfaces.FloatingInkData#inkStrokes~0:complex'
+references:
+  - uid: 'onenote!OneNote.Interfaces.FloatingInkData#inkStrokes~0:complex'
+    name: 'OneNote.Interfaces.InkStrokeData[]'
+    fullName: 'OneNote.Interfaces.InkStrokeData[]'
+    spec.typeScript:
+      - uid: 'onenote!OneNote.Interfaces.InkStrokeData:interface'
+        name: OneNote.Interfaces.InkStrokeData
+        fullName: OneNote.Interfaces.InkStrokeData
+      - name: '[]'
+        fullName: '[]'
