--- a/docs/docs-ref-autogen/onenote/onenote/onenote.interfaces.pageloadoptions.yml
+++ b/docs/docs-ref-autogen/onenote/onenote/onenote.interfaces.pageloadoptions.yml
@@ -1,28 +1,28 @@
 ### YamlMime:UniversalReference
 items:
-  - uid: onenote.OneNote.Interfaces.PageLoadOptions
+  - uid: 'onenote!OneNote.Interfaces.PageLoadOptions:interface'
     summary: |-
-      <span data-ttu-id="f0a54-101">表示一个 OneNote 页面。</span><span class="sxs-lookup"><span data-stu-id="f0a54-101">Represents a OneNote page.</span></span>
+      <span data-ttu-id="84bff-101">表示一个 OneNote 页面。</span><span class="sxs-lookup"><span data-stu-id="84bff-101">Represents a OneNote page.</span></span>
 
-      <span data-ttu-id="f0a54-102">\[[API 集: OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="f0a54-102">\[ [API set: OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="84bff-102">\[[API 集： OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="84bff-102">\[ [API set: OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets) \]</span></span>
     name: OneNote.Interfaces.PageLoadOptions
     fullName: OneNote.Interfaces.PageLoadOptions
     langs:
       - typeScript
     type: interface
-    package: onenote
+    package: onenote!
     children:
-      - onenote.OneNote.Interfaces.PageLoadOptions.$all
-      - onenote.OneNote.Interfaces.PageLoadOptions.classNotebookPageSource
-      - onenote.OneNote.Interfaces.PageLoadOptions.clientUrl
-      - onenote.OneNote.Interfaces.PageLoadOptions.contents
-      - onenote.OneNote.Interfaces.PageLoadOptions.id
-      - onenote.OneNote.Interfaces.PageLoadOptions.inkAnalysisOrNull
-      - onenote.OneNote.Interfaces.PageLoadOptions.pageLevel
-      - onenote.OneNote.Interfaces.PageLoadOptions.parentSection
-      - onenote.OneNote.Interfaces.PageLoadOptions.title
-      - onenote.OneNote.Interfaces.PageLoadOptions.webUrl
-  - uid: onenote.OneNote.Interfaces.PageLoadOptions.$all
+      - 'onenote!OneNote.Interfaces.PageLoadOptions#$all:member'
+      - 'onenote!OneNote.Interfaces.PageLoadOptions#classNotebookPageSource:member'
+      - 'onenote!OneNote.Interfaces.PageLoadOptions#clientUrl:member'
+      - 'onenote!OneNote.Interfaces.PageLoadOptions#contents:member'
+      - 'onenote!OneNote.Interfaces.PageLoadOptions#id:member'
+      - 'onenote!OneNote.Interfaces.PageLoadOptions#inkAnalysisOrNull:member'
+      - 'onenote!OneNote.Interfaces.PageLoadOptions#pageLevel:member'
+      - 'onenote!OneNote.Interfaces.PageLoadOptions#parentSection:member'
+      - 'onenote!OneNote.Interfaces.PageLoadOptions#title:member'
+      - 'onenote!OneNote.Interfaces.PageLoadOptions#webUrl:member'
+  - uid: 'onenote!OneNote.Interfaces.PageLoadOptions#$all:member'
     name: $all
     fullName: $all
     langs:
@@ -33,11 +33,11 @@ items:
       return:
         type:
           - boolean
-  - uid: onenote.OneNote.Interfaces.PageLoadOptions.classNotebookPageSource
+  - uid: 'onenote!OneNote.Interfaces.PageLoadOptions#classNotebookPageSource:member'
     summary: |-
-      <span data-ttu-id="f0a54-103">获取页面的 ClassNotebookPageSource。</span><span class="sxs-lookup"><span data-stu-id="f0a54-103">Gets the ClassNotebookPageSource to the page.</span></span>
+      <span data-ttu-id="84bff-103">获取页面的 ClassNotebookPageSource。</span><span class="sxs-lookup"><span data-stu-id="84bff-103">Gets the ClassNotebookPageSource to the page.</span></span>
 
-      <span data-ttu-id="f0a54-104">\[[API 集: OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="f0a54-104">\[ [API set: OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="84bff-104">\[[API 集： OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="84bff-104">\[ [API set: OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets) \]</span></span>
     name: classNotebookPageSource
     fullName: classNotebookPageSource
     langs:
@@ -48,11 +48,11 @@ items:
       return:
         type:
           - boolean
-  - uid: onenote.OneNote.Interfaces.PageLoadOptions.clientUrl
+  - uid: 'onenote!OneNote.Interfaces.PageLoadOptions#clientUrl:member'
     summary: |-
-      <span data-ttu-id="f0a54-105">页面的客户端 url。</span><span class="sxs-lookup"><span data-stu-id="f0a54-105">The client url of the page.</span></span> <span data-ttu-id="f0a54-106">只读</span><span class="sxs-lookup"><span data-stu-id="f0a54-106">Read only</span></span>
+      <span data-ttu-id="84bff-105">页面的客户端 url。</span><span class="sxs-lookup"><span data-stu-id="84bff-105">The client url of the page.</span></span> <span data-ttu-id="84bff-106">只读</span><span class="sxs-lookup"><span data-stu-id="84bff-106">Read only</span></span>
 
-      <span data-ttu-id="f0a54-107">\[[API 集: OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="f0a54-107">\[ [API set: OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="84bff-107">\[[API 集： OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="84bff-107">\[ [API set: OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets) \]</span></span>
     name: clientUrl
     fullName: clientUrl
     langs:
@@ -63,11 +63,11 @@ items:
       return:
         type:
           - boolean
-  - uid: onenote.OneNote.Interfaces.PageLoadOptions.contents
+  - uid: 'onenote!OneNote.Interfaces.PageLoadOptions#contents:member'
     summary: |-
-      <span data-ttu-id="f0a54-108">页面上 PageContent 对象的集合。</span><span class="sxs-lookup"><span data-stu-id="f0a54-108">The collection of PageContent objects on the page.</span></span> <span data-ttu-id="f0a54-109">只读</span><span class="sxs-lookup"><span data-stu-id="f0a54-109">Read only</span></span>
+      <span data-ttu-id="84bff-108">页面上 PageContent 对象的集合。</span><span class="sxs-lookup"><span data-stu-id="84bff-108">The collection of PageContent objects on the page.</span></span> <span data-ttu-id="84bff-109">只读</span><span class="sxs-lookup"><span data-stu-id="84bff-109">Read only</span></span>
 
-      <span data-ttu-id="f0a54-110">\[[API 集: OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="f0a54-110">\[ [API set: OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="84bff-110">\[[API 集： OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="84bff-110">\[ [API set: OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets) \]</span></span>
     name: contents
     fullName: contents
     langs:
@@ -77,12 +77,12 @@ items:
       content: 'contents?: OneNote.Interfaces.PageContentCollectionLoadOptions;'
       return:
         type:
-          - onenote.OneNote.Interfaces.PageContentCollectionLoadOptions
-  - uid: onenote.OneNote.Interfaces.PageLoadOptions.id
+          - 'onenote!OneNote.Interfaces.PageContentCollectionLoadOptions:interface'
+  - uid: 'onenote!OneNote.Interfaces.PageLoadOptions#id:member'
     summary: |-
-      <span data-ttu-id="f0a54-111">获取页面的 ID。</span><span class="sxs-lookup"><span data-stu-id="f0a54-111">Gets the ID of the page.</span></span> <span data-ttu-id="f0a54-112">只读。</span><span class="sxs-lookup"><span data-stu-id="f0a54-112">Read-only.</span></span>
+      <span data-ttu-id="84bff-111">获取页面的 ID。</span><span class="sxs-lookup"><span data-stu-id="84bff-111">Gets the ID of the page.</span></span> <span data-ttu-id="84bff-112">只读。</span><span class="sxs-lookup"><span data-stu-id="84bff-112">Read-only.</span></span>
 
-      <span data-ttu-id="f0a54-113">\[[API 集: OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="f0a54-113">\[ [API set: OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="84bff-113">\[[API 集： OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="84bff-113">\[ [API set: OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets) \]</span></span>
     name: id
     fullName: id
     langs:
@@ -93,11 +93,11 @@ items:
       return:
         type:
           - boolean
-  - uid: onenote.OneNote.Interfaces.PageLoadOptions.inkAnalysisOrNull
+  - uid: 'onenote!OneNote.Interfaces.PageLoadOptions#inkAnalysisOrNull:member'
     summary: |-
-      <span data-ttu-id="f0a54-114">页面上墨迹的文本解释。</span><span class="sxs-lookup"><span data-stu-id="f0a54-114">Text interpretation for the ink on the page.</span></span> <span data-ttu-id="f0a54-115">如果没有墨迹分析信息，则返回 null。</span><span class="sxs-lookup"><span data-stu-id="f0a54-115">Returns null if there is no ink analysis information.</span></span> <span data-ttu-id="f0a54-116">只读。</span><span class="sxs-lookup"><span data-stu-id="f0a54-116">Read only.</span></span>
+      <span data-ttu-id="84bff-114">页面上墨迹的文本解释。</span><span class="sxs-lookup"><span data-stu-id="84bff-114">Text interpretation for the ink on the page.</span></span> <span data-ttu-id="84bff-115">如果没有墨迹分析信息，则返回 null。</span><span class="sxs-lookup"><span data-stu-id="84bff-115">Returns null if there is no ink analysis information.</span></span> <span data-ttu-id="84bff-116">只读。</span><span class="sxs-lookup"><span data-stu-id="84bff-116">Read only.</span></span>
 
-      <span data-ttu-id="f0a54-117">\[[API 集: OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="f0a54-117">\[ [API set: OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="84bff-117">\[[API 集： OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="84bff-117">\[ [API set: OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets) \]</span></span>
     name: inkAnalysisOrNull
     fullName: inkAnalysisOrNull
     langs:
@@ -107,12 +107,12 @@ items:
       content: 'inkAnalysisOrNull?: OneNote.Interfaces.InkAnalysisLoadOptions;'
       return:
         type:
-          - onenote.OneNote.Interfaces.InkAnalysisLoadOptions
-  - uid: onenote.OneNote.Interfaces.PageLoadOptions.pageLevel
+          - 'onenote!OneNote.Interfaces.InkAnalysisLoadOptions:interface'
+  - uid: 'onenote!OneNote.Interfaces.PageLoadOptions#pageLevel:member'
     summary: |-
-      <span data-ttu-id="f0a54-118">获取或设置页面的缩进级别。</span><span class="sxs-lookup"><span data-stu-id="f0a54-118">Gets or sets the indentation level of the page.</span></span>
+      <span data-ttu-id="84bff-118">获取或设置页面的缩进级别。</span><span class="sxs-lookup"><span data-stu-id="84bff-118">Gets or sets the indentation level of the page.</span></span>
 
-      <span data-ttu-id="f0a54-119">\[[API 集: OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="f0a54-119">\[ [API set: OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="84bff-119">\[[API 集： OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="84bff-119">\[ [API set: OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets) \]</span></span>
     name: pageLevel
     fullName: pageLevel
     langs:
@@ -123,11 +123,11 @@ items:
       return:
         type:
           - boolean
-  - uid: onenote.OneNote.Interfaces.PageLoadOptions.parentSection
+  - uid: 'onenote!OneNote.Interfaces.PageLoadOptions#parentSection:member'
     summary: |-
-      <span data-ttu-id="f0a54-120">获取包含页面的分区。</span><span class="sxs-lookup"><span data-stu-id="f0a54-120">Gets the section that contains the page.</span></span>
+      <span data-ttu-id="84bff-120">获取包含页面的分区。</span><span class="sxs-lookup"><span data-stu-id="84bff-120">Gets the section that contains the page.</span></span>
 
-      <span data-ttu-id="f0a54-121">\[[API 集: OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="f0a54-121">\[ [API set: OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="84bff-121">\[[API 集： OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="84bff-121">\[ [API set: OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets) \]</span></span>
     name: parentSection
     fullName: parentSection
     langs:
@@ -137,12 +137,12 @@ items:
       content: 'parentSection?: OneNote.Interfaces.SectionLoadOptions;'
       return:
         type:
-          - onenote.OneNote.Interfaces.SectionLoadOptions
-  - uid: onenote.OneNote.Interfaces.PageLoadOptions.title
+          - 'onenote!OneNote.Interfaces.SectionLoadOptions:interface'
+  - uid: 'onenote!OneNote.Interfaces.PageLoadOptions#title:member'
     summary: |-
-      <span data-ttu-id="f0a54-122">获取或设置页面的标题。</span><span class="sxs-lookup"><span data-stu-id="f0a54-122">Gets or sets the title of the page.</span></span>
+      <span data-ttu-id="84bff-122">获取或设置页面的标题。</span><span class="sxs-lookup"><span data-stu-id="84bff-122">Gets or sets the title of the page.</span></span>
 
-      <span data-ttu-id="f0a54-123">\[[API 集: OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="f0a54-123">\[ [API set: OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="84bff-123">\[[API 集： OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="84bff-123">\[ [API set: OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets) \]</span></span>
     name: title
     fullName: title
     langs:
@@ -153,11 +153,11 @@ items:
       return:
         type:
           - boolean
-  - uid: onenote.OneNote.Interfaces.PageLoadOptions.webUrl
+  - uid: 'onenote!OneNote.Interfaces.PageLoadOptions#webUrl:member'
     summary: |-
-      <span data-ttu-id="f0a54-124">页面的 Web URL。</span><span class="sxs-lookup"><span data-stu-id="f0a54-124">The web url of the page.</span></span> <span data-ttu-id="f0a54-125">只读</span><span class="sxs-lookup"><span data-stu-id="f0a54-125">Read only</span></span>
+      <span data-ttu-id="84bff-124">页面的 Web URL。</span><span class="sxs-lookup"><span data-stu-id="84bff-124">The web url of the page.</span></span> <span data-ttu-id="84bff-125">只读</span><span class="sxs-lookup"><span data-stu-id="84bff-125">Read only</span></span>
 
-      <span data-ttu-id="f0a54-126">\[[API 集: OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="f0a54-126">\[ [API set: OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="84bff-126">\[[API 集： OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="84bff-126">\[ [API set: OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets) \]</span></span>
     name: webUrl
     fullName: webUrl
     langs:
@@ -168,3 +168,10 @@ items:
       return:
         type:
           - boolean
+references:
+  - uid: 'onenote!OneNote.Interfaces.PageContentCollectionLoadOptions:interface'
+    name: OneNote.Interfaces.PageContentCollectionLoadOptions
+  - uid: 'onenote!OneNote.Interfaces.InkAnalysisLoadOptions:interface'
+    name: OneNote.Interfaces.InkAnalysisLoadOptions
+  - uid: 'onenote!OneNote.Interfaces.SectionLoadOptions:interface'
+    name: OneNote.Interfaces.SectionLoadOptions
