--- a/docs/docs-ref-autogen/onenote/onenote/onenote.interfaces.paragraphcollectionupdatedata.yml
+++ b/docs/docs-ref-autogen/onenote/onenote/onenote.interfaces.paragraphcollectionupdatedata.yml
@@ -1,16 +1,16 @@
 ### YamlMime:UniversalReference
 items:
-  - uid: onenote.OneNote.Interfaces.ParagraphCollectionUpdateData
-    summary: '<span data-ttu-id="e56fc-101">一个用于更新 ParagraphCollection 对象上的数据的接口, 可用于 "paragraphCollection (</span><span class="sxs-lookup"><span data-stu-id="e56fc-101">An interface for updating data on the ParagraphCollection object, for use in "paragraphCollection.set(</span></span><!-- --><span data-ttu-id="e56fc-102">{ ... }</span><span class="sxs-lookup"><span data-stu-id="e56fc-102"></span></span><!-- --><span data-ttu-id="e56fc-103">)".</span><span class="sxs-lookup"><span data-stu-id="e56fc-103"></span></span>'
+  - uid: 'onenote!OneNote.Interfaces.ParagraphCollectionUpdateData:interface'
+    summary: '<span data-ttu-id="3b0bc-101">一个用于更新 ParagraphCollection 对象上的数据的接口，可用于 "paragraphCollection （</span><span class="sxs-lookup"><span data-stu-id="3b0bc-101">An interface for updating data on the ParagraphCollection object, for use in "paragraphCollection.set(</span></span><!-- --><span data-ttu-id="3b0bc-102">{ ... }</span><span class="sxs-lookup"><span data-stu-id="3b0bc-102"></span></span><!-- --><span data-ttu-id="3b0bc-103">)".</span><span class="sxs-lookup"><span data-stu-id="3b0bc-103"></span></span>'
     name: OneNote.Interfaces.ParagraphCollectionUpdateData
     fullName: OneNote.Interfaces.ParagraphCollectionUpdateData
     langs:
       - typeScript
     type: interface
-    package: onenote
+    package: onenote!
     children:
-      - onenote.OneNote.Interfaces.ParagraphCollectionUpdateData.items
-  - uid: onenote.OneNote.Interfaces.ParagraphCollectionUpdateData.items
+      - 'onenote!OneNote.Interfaces.ParagraphCollectionUpdateData#items:member'
+  - uid: 'onenote!OneNote.Interfaces.ParagraphCollectionUpdateData#items:member'
     name: items
     fullName: items
     langs:
@@ -20,4 +20,14 @@ items:
       content: 'items?: OneNote.Interfaces.ParagraphData[];'
       return:
         type:
-          - 'OneNote.Interfaces.ParagraphData[]'
+          - 'onenote!OneNote.Interfaces.ParagraphCollectionUpdateData#items~0:complex'
+references:
+  - uid: 'onenote!OneNote.Interfaces.ParagraphCollectionUpdateData#items~0:complex'
+    name: 'OneNote.Interfaces.ParagraphData[]'
+    fullName: 'OneNote.Interfaces.ParagraphData[]'
+    spec.typeScript:
+      - uid: 'onenote!OneNote.Interfaces.ParagraphData:interface'
+        name: OneNote.Interfaces.ParagraphData
+        fullName: OneNote.Interfaces.ParagraphData
+      - name: '[]'
+        fullName: '[]'
