--- a/docs/docs-ref-autogen/onenote/onenote/onenote.interfaces.tablecellloadoptions.yml
+++ b/docs/docs-ref-autogen/onenote/onenote/onenote.interfaces.tablecellloadoptions.yml
@@ -1,25 +1,25 @@
 ### YamlMime:UniversalReference
 items:
-  - uid: onenote.OneNote.Interfaces.TableCellLoadOptions
+  - uid: 'onenote!OneNote.Interfaces.TableCellLoadOptions:interface'
     summary: |-
-      <span data-ttu-id="f37f8-101">表示 OneNote 表中的一个单元格。</span><span class="sxs-lookup"><span data-stu-id="f37f8-101">Represents a cell in a OneNote table.</span></span>
+      <span data-ttu-id="70586-101">表示 OneNote 表中的一个单元格。</span><span class="sxs-lookup"><span data-stu-id="70586-101">Represents a cell in a OneNote table.</span></span>
 
-      <span data-ttu-id="f37f8-102">\[[API 集: OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="f37f8-102">\[ [API set: OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="70586-102">\[[API 集： OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="70586-102">\[ [API set: OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets) \]</span></span>
     name: OneNote.Interfaces.TableCellLoadOptions
     fullName: OneNote.Interfaces.TableCellLoadOptions
     langs:
       - typeScript
     type: interface
-    package: onenote
+    package: onenote!
     children:
-      - onenote.OneNote.Interfaces.TableCellLoadOptions.$all
-      - onenote.OneNote.Interfaces.TableCellLoadOptions.cellIndex
-      - onenote.OneNote.Interfaces.TableCellLoadOptions.id
-      - onenote.OneNote.Interfaces.TableCellLoadOptions.paragraphs
-      - onenote.OneNote.Interfaces.TableCellLoadOptions.parentRow
-      - onenote.OneNote.Interfaces.TableCellLoadOptions.rowIndex
-      - onenote.OneNote.Interfaces.TableCellLoadOptions.shadingColor
-  - uid: onenote.OneNote.Interfaces.TableCellLoadOptions.$all
+      - 'onenote!OneNote.Interfaces.TableCellLoadOptions#$all:member'
+      - 'onenote!OneNote.Interfaces.TableCellLoadOptions#cellIndex:member'
+      - 'onenote!OneNote.Interfaces.TableCellLoadOptions#id:member'
+      - 'onenote!OneNote.Interfaces.TableCellLoadOptions#paragraphs:member'
+      - 'onenote!OneNote.Interfaces.TableCellLoadOptions#parentRow:member'
+      - 'onenote!OneNote.Interfaces.TableCellLoadOptions#rowIndex:member'
+      - 'onenote!OneNote.Interfaces.TableCellLoadOptions#shadingColor:member'
+  - uid: 'onenote!OneNote.Interfaces.TableCellLoadOptions#$all:member'
     name: $all
     fullName: $all
     langs:
@@ -30,11 +30,11 @@ items:
       return:
         type:
           - boolean
-  - uid: onenote.OneNote.Interfaces.TableCellLoadOptions.cellIndex
+  - uid: 'onenote!OneNote.Interfaces.TableCellLoadOptions#cellIndex:member'
     summary: |-
-      <span data-ttu-id="f37f8-103">获取单元格行中的单元格索引。</span><span class="sxs-lookup"><span data-stu-id="f37f8-103">Gets the index of the cell in its row.</span></span> <span data-ttu-id="f37f8-104">只读。</span><span class="sxs-lookup"><span data-stu-id="f37f8-104">Read-only.</span></span>
+      <span data-ttu-id="70586-103">获取单元格行中的单元格索引。</span><span class="sxs-lookup"><span data-stu-id="70586-103">Gets the index of the cell in its row.</span></span> <span data-ttu-id="70586-104">只读。</span><span class="sxs-lookup"><span data-stu-id="70586-104">Read-only.</span></span>
 
-      <span data-ttu-id="f37f8-105">\[[API 集: OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="f37f8-105">\[ [API set: OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="70586-105">\[[API 集： OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="70586-105">\[ [API set: OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets) \]</span></span>
     name: cellIndex
     fullName: cellIndex
     langs:
@@ -45,11 +45,11 @@ items:
       return:
         type:
           - boolean
-  - uid: onenote.OneNote.Interfaces.TableCellLoadOptions.id
+  - uid: 'onenote!OneNote.Interfaces.TableCellLoadOptions#id:member'
     summary: |-
-      <span data-ttu-id="f37f8-106">获取单元格的 ID。</span><span class="sxs-lookup"><span data-stu-id="f37f8-106">Gets the ID of the cell.</span></span> <span data-ttu-id="f37f8-107">只读。</span><span class="sxs-lookup"><span data-stu-id="f37f8-107">Read-only.</span></span>
+      <span data-ttu-id="70586-106">获取单元格的 ID。</span><span class="sxs-lookup"><span data-stu-id="70586-106">Gets the ID of the cell.</span></span> <span data-ttu-id="70586-107">只读。</span><span class="sxs-lookup"><span data-stu-id="70586-107">Read-only.</span></span>
 
-      <span data-ttu-id="f37f8-108">\[[API 集: OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="f37f8-108">\[ [API set: OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="70586-108">\[[API 集： OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="70586-108">\[ [API set: OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets) \]</span></span>
     name: id
     fullName: id
     langs:
@@ -60,11 +60,11 @@ items:
       return:
         type:
           - boolean
-  - uid: onenote.OneNote.Interfaces.TableCellLoadOptions.paragraphs
+  - uid: 'onenote!OneNote.Interfaces.TableCellLoadOptions#paragraphs:member'
     summary: |-
-      <span data-ttu-id="f37f8-109">获取 TableCell 中 Paragraph 对象的集合。</span><span class="sxs-lookup"><span data-stu-id="f37f8-109">Gets the collection of Paragraph objects in the TableCell.</span></span>
+      <span data-ttu-id="70586-109">获取 TableCell 中 Paragraph 对象的集合。</span><span class="sxs-lookup"><span data-stu-id="70586-109">Gets the collection of Paragraph objects in the TableCell.</span></span>
 
-      <span data-ttu-id="f37f8-110">\[[API 集: OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="f37f8-110">\[ [API set: OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="70586-110">\[[API 集： OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="70586-110">\[ [API set: OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets) \]</span></span>
     name: paragraphs
     fullName: paragraphs
     langs:
@@ -74,12 +74,12 @@ items:
       content: 'paragraphs?: OneNote.Interfaces.ParagraphCollectionLoadOptions;'
       return:
         type:
-          - onenote.OneNote.Interfaces.ParagraphCollectionLoadOptions
-  - uid: onenote.OneNote.Interfaces.TableCellLoadOptions.parentRow
+          - 'onenote!OneNote.Interfaces.ParagraphCollectionLoadOptions:interface'
+  - uid: 'onenote!OneNote.Interfaces.TableCellLoadOptions#parentRow:member'
     summary: |-
-      <span data-ttu-id="f37f8-111">获取单元格的父行。</span><span class="sxs-lookup"><span data-stu-id="f37f8-111">Gets the parent row of the cell.</span></span>
+      <span data-ttu-id="70586-111">获取单元格的父行。</span><span class="sxs-lookup"><span data-stu-id="70586-111">Gets the parent row of the cell.</span></span>
 
-      <span data-ttu-id="f37f8-112">\[[API 集: OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="f37f8-112">\[ [API set: OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="70586-112">\[[API 集： OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="70586-112">\[ [API set: OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets) \]</span></span>
     name: parentRow
     fullName: parentRow
     langs:
@@ -89,12 +89,12 @@ items:
       content: 'parentRow?: OneNote.Interfaces.TableRowLoadOptions;'
       return:
         type:
-          - onenote.OneNote.Interfaces.TableRowLoadOptions
-  - uid: onenote.OneNote.Interfaces.TableCellLoadOptions.rowIndex
+          - 'onenote!OneNote.Interfaces.TableRowLoadOptions:interface'
+  - uid: 'onenote!OneNote.Interfaces.TableCellLoadOptions#rowIndex:member'
     summary: |-
-      <span data-ttu-id="f37f8-113">获取表中单元格行的索引。</span><span class="sxs-lookup"><span data-stu-id="f37f8-113">Gets the index of the cell's row in the table.</span></span> <span data-ttu-id="f37f8-114">只读。</span><span class="sxs-lookup"><span data-stu-id="f37f8-114">Read-only.</span></span>
+      <span data-ttu-id="70586-113">获取表中单元格行的索引。</span><span class="sxs-lookup"><span data-stu-id="70586-113">Gets the index of the cell's row in the table.</span></span> <span data-ttu-id="70586-114">只读。</span><span class="sxs-lookup"><span data-stu-id="70586-114">Read-only.</span></span>
 
-      <span data-ttu-id="f37f8-115">\[[API 集: OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="f37f8-115">\[ [API set: OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="70586-115">\[[API 集： OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="70586-115">\[ [API set: OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets) \]</span></span>
     name: rowIndex
     fullName: rowIndex
     langs:
@@ -105,11 +105,11 @@ items:
       return:
         type:
           - boolean
-  - uid: onenote.OneNote.Interfaces.TableCellLoadOptions.shadingColor
+  - uid: 'onenote!OneNote.Interfaces.TableCellLoadOptions#shadingColor:member'
     summary: |-
-      <span data-ttu-id="f37f8-116">获取并设置单元格的底纹色</span><span class="sxs-lookup"><span data-stu-id="f37f8-116">Gets and sets the shading color of the cell</span></span>
+      <span data-ttu-id="70586-116">获取并设置单元格的底纹色</span><span class="sxs-lookup"><span data-stu-id="70586-116">Gets and sets the shading color of the cell</span></span>
 
-      <span data-ttu-id="f37f8-117">\[[API 集: OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="f37f8-117">\[ [API set: OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="70586-117">\[[API 集： OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="70586-117">\[ [API set: OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets) \]</span></span>
     name: shadingColor
     fullName: shadingColor
     langs:
@@ -120,3 +120,8 @@ items:
       return:
         type:
           - boolean
+references:
+  - uid: 'onenote!OneNote.Interfaces.ParagraphCollectionLoadOptions:interface'
+    name: OneNote.Interfaces.ParagraphCollectionLoadOptions
+  - uid: 'onenote!OneNote.Interfaces.TableRowLoadOptions:interface'
+    name: OneNote.Interfaces.TableRowLoadOptions
