--- a/docs/docs-ref-autogen/outlook/outlook/office.mailboxenums.month.yml
+++ b/docs/docs-ref-autogen/outlook/outlook/office.mailboxenums.month.yml
@@ -1,120 +1,120 @@
 ### YamlMime:UniversalReference
 items:
-  - uid: outlook.Office.MailboxEnums.Month
+  - uid: 'outlook!Office.MailboxEnums.Month:enum'
     summary: |-
-      <span data-ttu-id="c95b2-101">指定月。</span><span class="sxs-lookup"><span data-stu-id="c95b2-101">Specifies the month.</span></span>
+      <span data-ttu-id="bbd8b-101">指定月。</span><span class="sxs-lookup"><span data-stu-id="bbd8b-101">Specifies the month.</span></span>
 
-      <span data-ttu-id="c95b2-102">\[[API 集: 邮箱 1.7](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="c95b2-102">\[ [API set: Mailbox 1.7](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets) \]</span></span>
-    remarks: '<span data-ttu-id="c95b2-103">**[适用的 Outlook 模式](https://docs.microsoft.com/outlook/add-ins/#extension-points)<!-- -->**: 撰写或阅读</span><span class="sxs-lookup"><span data-stu-id="c95b2-103">**[Applicable Outlook mode](https://docs.microsoft.com/outlook/add-ins/#extension-points)<!-- -->**: Compose or Read</span></span>'
+      <span data-ttu-id="bbd8b-102">\[[API 集：邮箱 1.7](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="bbd8b-102">\[ [API set: Mailbox 1.7](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets) \]</span></span>
+    remarks: '<span data-ttu-id="bbd8b-103">**[适用的 Outlook 模式](https://docs.microsoft.com/outlook/add-ins/#extension-points)<!-- -->**：撰写或阅读</span><span class="sxs-lookup"><span data-stu-id="bbd8b-103">**[Applicable Outlook mode](https://docs.microsoft.com/outlook/add-ins/#extension-points)<!-- -->**: Compose or Read</span></span>'
     name: Office.MailboxEnums.Month
     fullName: Office.MailboxEnums.Month
     langs:
       - typeScript
     type: enum
-    package: outlook
+    package: outlook!
     children:
-      - outlook.Office.MailboxEnums.Month.Apr
-      - outlook.Office.MailboxEnums.Month.Aug
-      - outlook.Office.MailboxEnums.Month.Dec
-      - outlook.Office.MailboxEnums.Month.Feb
-      - outlook.Office.MailboxEnums.Month.Jan
-      - outlook.Office.MailboxEnums.Month.Jul
-      - outlook.Office.MailboxEnums.Month.Jun
-      - outlook.Office.MailboxEnums.Month.Mar
-      - outlook.Office.MailboxEnums.Month.May
-      - outlook.Office.MailboxEnums.Month.Nov
-      - outlook.Office.MailboxEnums.Month.Oct
-      - outlook.Office.MailboxEnums.Month.Sep
-  - uid: outlook.Office.MailboxEnums.Month.Apr
-    summary: <span data-ttu-id="c95b2-104">年4月</span><span class="sxs-lookup"><span data-stu-id="c95b2-104">April</span></span>
+      - 'outlook!Office.MailboxEnums.Month.Apr:member'
+      - 'outlook!Office.MailboxEnums.Month.Aug:member'
+      - 'outlook!Office.MailboxEnums.Month.Dec:member'
+      - 'outlook!Office.MailboxEnums.Month.Feb:member'
+      - 'outlook!Office.MailboxEnums.Month.Jan:member'
+      - 'outlook!Office.MailboxEnums.Month.Jul:member'
+      - 'outlook!Office.MailboxEnums.Month.Jun:member'
+      - 'outlook!Office.MailboxEnums.Month.Mar:member'
+      - 'outlook!Office.MailboxEnums.Month.May:member'
+      - 'outlook!Office.MailboxEnums.Month.Nov:member'
+      - 'outlook!Office.MailboxEnums.Month.Oct:member'
+      - 'outlook!Office.MailboxEnums.Month.Sep:member'
+  - uid: 'outlook!Office.MailboxEnums.Month.Apr:member'
+    summary: <span data-ttu-id="bbd8b-104">年4月</span><span class="sxs-lookup"><span data-stu-id="bbd8b-104">April</span></span>
     name: Apr
     fullName: Apr
     langs:
       - typeScript
     type: field
     numericValue: '"apr"'
-  - uid: outlook.Office.MailboxEnums.Month.Aug
-    summary: <span data-ttu-id="c95b2-105">年8月</span><span class="sxs-lookup"><span data-stu-id="c95b2-105">August</span></span>
+  - uid: 'outlook!Office.MailboxEnums.Month.Aug:member'
+    summary: <span data-ttu-id="bbd8b-105">年8月</span><span class="sxs-lookup"><span data-stu-id="bbd8b-105">August</span></span>
     name: Aug
     fullName: Aug
     langs:
       - typeScript
     type: field
     numericValue: '"aug"'
-  - uid: outlook.Office.MailboxEnums.Month.Dec
-    summary: <span data-ttu-id="c95b2-106">12</span><span class="sxs-lookup"><span data-stu-id="c95b2-106">December</span></span>
+  - uid: 'outlook!Office.MailboxEnums.Month.Dec:member'
+    summary: <span data-ttu-id="bbd8b-106">12</span><span class="sxs-lookup"><span data-stu-id="bbd8b-106">December</span></span>
     name: Dec
     fullName: Dec
     langs:
       - typeScript
     type: field
     numericValue: '"dec"'
-  - uid: outlook.Office.MailboxEnums.Month.Feb
-    summary: <span data-ttu-id="c95b2-107">2</span><span class="sxs-lookup"><span data-stu-id="c95b2-107">February</span></span>
+  - uid: 'outlook!Office.MailboxEnums.Month.Feb:member'
+    summary: <span data-ttu-id="bbd8b-107">2</span><span class="sxs-lookup"><span data-stu-id="bbd8b-107">February</span></span>
     name: Feb
     fullName: Feb
     langs:
       - typeScript
     type: field
     numericValue: '"feb"'
-  - uid: outlook.Office.MailboxEnums.Month.Jan
-    summary: <span data-ttu-id="c95b2-108">年1月</span><span class="sxs-lookup"><span data-stu-id="c95b2-108">January</span></span>
+  - uid: 'outlook!Office.MailboxEnums.Month.Jan:member'
+    summary: <span data-ttu-id="bbd8b-108">年1月</span><span class="sxs-lookup"><span data-stu-id="bbd8b-108">January</span></span>
     name: Jan
     fullName: Jan
     langs:
       - typeScript
     type: field
     numericValue: '"jan"'
-  - uid: outlook.Office.MailboxEnums.Month.Jul
-    summary: <span data-ttu-id="c95b2-109">年7月</span><span class="sxs-lookup"><span data-stu-id="c95b2-109">July</span></span>
+  - uid: 'outlook!Office.MailboxEnums.Month.Jul:member'
+    summary: <span data-ttu-id="bbd8b-109">年7月</span><span class="sxs-lookup"><span data-stu-id="bbd8b-109">July</span></span>
     name: Jul
     fullName: Jul
     langs:
       - typeScript
     type: field
     numericValue: '"jul"'
-  - uid: outlook.Office.MailboxEnums.Month.Jun
-    summary: <span data-ttu-id="c95b2-110">7</span><span class="sxs-lookup"><span data-stu-id="c95b2-110">June</span></span>
+  - uid: 'outlook!Office.MailboxEnums.Month.Jun:member'
+    summary: <span data-ttu-id="bbd8b-110">7</span><span class="sxs-lookup"><span data-stu-id="bbd8b-110">June</span></span>
     name: Jun
     fullName: Jun
     langs:
       - typeScript
     type: field
     numericValue: '"jun"'
-  - uid: outlook.Office.MailboxEnums.Month.Mar
-    summary: <span data-ttu-id="c95b2-111">31</span><span class="sxs-lookup"><span data-stu-id="c95b2-111">March</span></span>
+  - uid: 'outlook!Office.MailboxEnums.Month.Mar:member'
+    summary: <span data-ttu-id="bbd8b-111">31</span><span class="sxs-lookup"><span data-stu-id="bbd8b-111">March</span></span>
     name: Mar
     fullName: Mar
     langs:
       - typeScript
     type: field
     numericValue: '"mar"'
-  - uid: outlook.Office.MailboxEnums.Month.May
-    summary: <span data-ttu-id="c95b2-112">有时</span><span class="sxs-lookup"><span data-stu-id="c95b2-112">May</span></span>
+  - uid: 'outlook!Office.MailboxEnums.Month.May:member'
+    summary: <span data-ttu-id="bbd8b-112">有时</span><span class="sxs-lookup"><span data-stu-id="bbd8b-112">May</span></span>
     name: May
     fullName: May
     langs:
       - typeScript
     type: field
     numericValue: '"may"'
-  - uid: outlook.Office.MailboxEnums.Month.Nov
-    summary: <span data-ttu-id="c95b2-113">2007</span><span class="sxs-lookup"><span data-stu-id="c95b2-113">November</span></span>
+  - uid: 'outlook!Office.MailboxEnums.Month.Nov:member'
+    summary: <span data-ttu-id="bbd8b-113">2007</span><span class="sxs-lookup"><span data-stu-id="bbd8b-113">November</span></span>
     name: Nov
     fullName: Nov
     langs:
       - typeScript
     type: field
     numericValue: '"nov"'
-  - uid: outlook.Office.MailboxEnums.Month.Oct
-    summary: <span data-ttu-id="c95b2-114">年</span><span class="sxs-lookup"><span data-stu-id="c95b2-114">October</span></span>
+  - uid: 'outlook!Office.MailboxEnums.Month.Oct:member'
+    summary: <span data-ttu-id="bbd8b-114">年</span><span class="sxs-lookup"><span data-stu-id="bbd8b-114">October</span></span>
     name: Oct
     fullName: Oct
     langs:
       - typeScript
     type: field
     numericValue: '"oct"'
-  - uid: outlook.Office.MailboxEnums.Month.Sep
-    summary: <span data-ttu-id="c95b2-115">月份</span><span class="sxs-lookup"><span data-stu-id="c95b2-115">September</span></span>
+  - uid: 'outlook!Office.MailboxEnums.Month.Sep:member'
+    summary: <span data-ttu-id="bbd8b-115">月份</span><span class="sxs-lookup"><span data-stu-id="bbd8b-115">September</span></span>
     name: Sep
     fullName: Sep
     langs:
