--- a/docs/docs-ref-autogen/outlook_1_2/outlook/office.sourceproperty.yml
+++ b/docs/docs-ref-autogen/outlook_1_2/outlook/office.sourceproperty.yml
@@ -1,24 +1,24 @@
 ### YamlMime:UniversalReference
 items:
-  - uid: outlook.Office.SourceProperty
+  - uid: 'outlook!Office.SourceProperty:enum'
     name: Office.SourceProperty
     fullName: Office.SourceProperty
     langs:
       - typeScript
     type: enum
-    package: outlook
+    package: outlook!
     children:
-      - outlook.Office.SourceProperty.Body
-      - outlook.Office.SourceProperty.Subject
-  - uid: outlook.Office.SourceProperty.Body
-    summary: <span data-ttu-id="cc0e4-101">数据源来自邮件的正文。</span><span class="sxs-lookup"><span data-stu-id="cc0e4-101">The source of the data is from the body of the message.</span></span>
+      - 'outlook!Office.SourceProperty.Body:member'
+      - 'outlook!Office.SourceProperty.Subject:member'
+  - uid: 'outlook!Office.SourceProperty.Body:member'
+    summary: <span data-ttu-id="9554d-101">数据源来自邮件的正文。</span><span class="sxs-lookup"><span data-stu-id="9554d-101">The source of the data is from the body of the message.</span></span>
     name: Body
     fullName: Body
     langs:
       - typeScript
     type: field
-  - uid: outlook.Office.SourceProperty.Subject
-    summary: <span data-ttu-id="cc0e4-102">数据源来自邮件的主题。</span><span class="sxs-lookup"><span data-stu-id="cc0e4-102">The source of the data is from the subject of the message.</span></span>
+  - uid: 'outlook!Office.SourceProperty.Subject:member'
+    summary: <span data-ttu-id="9554d-102">数据源来自邮件的主题。</span><span class="sxs-lookup"><span data-stu-id="9554d-102">The source of the data is from the subject of the message.</span></span>
     name: Subject
     fullName: Subject
     langs:
